--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,22 +1,43 @@
 ---
-title: 是不是因为得道高僧服用了这种草药，导致它会产生这样的结晶呢？
+title: 接种中共病毒疫苗后将提高癌症复发率
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968710/)
+`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1968817/)
 
-整理：雅典娜速记组
-编辑：tianzhihuan
+**疫苗（新冠疫苗）
+中共病毒（新冠病毒covid-19）**
 
-绝大多数都是这个结果，就是他长期吃素，然后吃某种草药，今天还有一些矿物质，很多人都会练出舍利子来，但那都是假的。这个佛祖手指的舍利子，在西安的还有在这个整个印度的，你到矾山，你看一看矾山，你就知道。就是你一定要记住，一定要相信我们对大自然的力量，就像我现在外面下着雪一样，它就这时候下雪，早了也不行，晚了也不行。已经是亿万年就这样子，大自然是有规律的。佛祖还有舍利子是跟大自然，自然形成的一种结果力量，是修行的结果。而且这是一种显现的方式，后来人要雪它就造假，共产党一样，我没有修行到，我要用后天力量的加持来打造，那都是假的一一都是假的啊。而且我深信，对真的人来说，我认为舍利子不是追求的目的，是以舍利子传法。但是很多人想利用舍利子这个传法的方式，来达到自己被信仰，成神的境界，这都是假的，都是虚妄，甚至是作孽。我觉得大家不要去崇拜舍利子，而是崇拜佛学佛陀的智慧，佛陀的智慧才能救我们，而不是佛陀的舍利子。我看到觉得神奇，我从来不觉得这个能救我，我认为佛陀的智慧能救我，谢谢。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/是不是因为得道高僧服用了这种草药，导致它会产生这样的结晶呢？-.jpg)
-2022年1月7日文贵大直播
+**我们不反疫苗，只针对假疫苗
+我们不反科学，只针对反人类**
 
-*发布：tianzhihuan*
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+编译：赵圣欢
+![](https://assets.gnews.org/wp-content/uploads/2022/02/截屏2022-02-07-14.27.31.png)
+如果给每个讲述自己挚友经历者一美金报酬，而他的癌症在中共病毒疫苗发作前处于缓解期，可在接种后不久就变得无法控制，我便可以挂印封金，老于泉林。
+
+DMED数据库显示，在推出中共病毒疫苗后，癌症发病率上升了3倍。参见《战争行动》：拜中共病毒「疫苗」所赐，军方的癌症发病率增加了两倍多。 在与瑞安•科尔（Ryan Cole）谈论这个问题时，他认为这主要是由于加速了现有的癌症（人们已知道自身所患癌症或出乎人们料想的新癌），而不是创造新的癌症病例。
+
+考虑一下我在2022年2月5日收到的这两封电子邮件，它们代表了我一直看到的评论： 我看了《第二观点》，想知道你是否找到了所谈事项的任何相关信息。我感兴趣的主题是添加到MRNA（信使核糖核酸）疫苗中的未转译的人类基因，这些基因是否可能对免疫系统如何追踪癌细胞产生不利影响正在讨论中 – 以减少对疫苗的炎症反应。 我看过几篇文章，其中有特定患者的案例研究，这些患者的癌症在接种疫苗后急剧恶化。
+
+及
+我私下认识两个人，他们现在患有非常严重的癌症……我昨天和我的医生交谈，她说她的一个病人在周一被诊断出癌症，到上周四死亡。她以前没有癌症…[\[email protected\]](/cdn-cgi/l/email-protection)
+及
+
+正是如此！我知道的三个人癌症正在康复期，注射疫苗后病症卷土重来；现在其中两人已病亡，第三人正接受全身化疗。我为其他所有携带BRCA基因的朋友深表担忧。
+及
+![](https://assets.gnews.org/wp-content/uploads/2022/02/PHOTO-2022-02-07-14-20-14.jpg)
+且这些推文表明，疫苗可以产生新的癌症：
+![](https://assets.gnews.org/wp-content/uploads/2022/02/PHOTO-2022-02-07-14-20-22.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/02/PHOTO-2022-02-07-14-20-31.jpg)
+
+
+至少，当接种疫苗后，你突然癌症复发或出现新的癌症时，不要感到诧异。
+
+总结
+
+如果您最近接种了疫苗，并且您以前受到控制的癌症病情急转直下，罪魁祸首很可能是您接种的”安全有效”疫苗。
+
+参考链接：[Cancers coming back with a vengeance is very common after the COVID vax](https://stevekirsch.substack.com/p/cancers-coming-back-with-a-vengeance)
+
+审核校对：Barry Jack
+上传排版：F
 
  
 
