--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,41 +1,83 @@
 ---
-title: DC大中华时事：冬奥会花费上万亿美元民脂民膏
+title: 2022.2.6文贵大直播概要
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1968594/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1968701/)
 
-*编辑：西北风 / 作图：*信正
+![](https://assets.gnews.org/wp-content/uploads/2022/02/87f92cd3829712cb102a1866faf2dad0.jpg)
+**整理：**顺其自然
+**编辑：**翼族
 
-![](http://himalayawashingtondc.org/wp-content/uploads/2021/08/ScreenShot-2021-08-01-at-17.25.09@2x.png)
+美国时间2022年2月6日，郭文贵先生与几位嘉宾做了个四个多小时的直播，在直播中郭先生主要讲了以下内容：
 
-#   墙国妄语每日驳
+1） 中共国在贫困山村的的老师，后半生基本没人问，有本事的都离开了那些地方，没本事的结局都很惨。郭先生最多一次，给了他的老师800万现金，结果都被这个老师的家人“借”完了，这个老师又回到了贫穷的状态。
 
-### **0**2.06.2022
+2）韩国、俄罗斯、丹麦的运动员说，他们在北京参加冬奥会很惨，摸啥啥不热，说他们就处于半死状态，回家的勇气都没有了。卡塔尔的某个官员，被骗去参加冬奥会，现在被隔离，受尽羞辱，出门还出不了，有四道关，饭菜两个小时才端上来。屋子里的电和WIFI没有管用的。郭先生让此人赶紧离开中国。
 
-[境外媒体：“冬奥热”令虎年春节生龙活虎\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/china/20220207/2468419.shtml)
+共产党用过的人就像擦过屁股的纸一样，马上扔掉。体制内战友说，让这些和中共勾兑、来中共国蹭钱的所有这些人日子都不好过，让他们一辈子难忘中国，让他们一生都不再来中国。
 
-***简评：***一个冬奥会，花费上万亿美元民脂民膏，只为突显习太阳光辉伟大，习太阳一心要名垂青史。宁赠友邦，不予家奴，到今天这一点我们还看不透吗？中国历史上各个王朝不都是这样吗。举个例子，北宋徽钦二宗被金人掳走点了天灯之后，宋高宗继位，是为南宋，当时手握重兵的三大将领张俊、岳飞和韩世忠，都被解除了兵权，张俊投靠了秦桧，韩国世忠立马把自己变成闲杂人等，大宋军队怎么能姓岳？谁的江山呀？唯独抗金名将岳飞是宋高宗心腹之患，金人言撼山易，撼岳家军难，宋高宗为了和金人和谈，在收复中原和和保住自己皇权之间高宗没有片刻犹豫选择了后者，只要这江山仍然姓赵，只有半壁又何妨！岳飞当然是宋高宗所杀而非秦桧。国土失于外邦只当赠予，同样，毛泽东承认外蒙古独立换来苏俄支持政权承认，江泽民承认中乌有争议领土归属乌兹别克斯坦换取江政权稳固和江家获得天量财富，同样，习太阳花费上万亿美元的冬奥会和上台后几万亿美元全世界大撒币不同样是为了习太阳自己稳固政权吗？宁赠友邦，不予家奴，中国老百姓现在连家奴也算不上，只是一荐荐的韭菜，老百姓算什么，什么都不是。这就是当权者如此之深的心机吧。这样的政权不亡，恐怕也天理不容。
+3）中共冬奥会的闭幕会有谁会来？普京已经走了，中共上千亿美元给普京的钱已经付过了，所以普京才成为唯一一个给习近平撑场面的人。开始说好是48小时，后来又问能不能时间再加长点，以“提高全天候战略伙伴关系的质量”的名义。所谓的全天候就是过去一直说的不结盟，事实是欺骗美国的对外结盟关系。习近平上台以后，与中东、伊朗、俄罗斯有了结盟关系。以前唯一个“你打仗我就上”的联盟关系是北朝鲜，但中共和北朝鲜的合同已经到期了，就是过期的结婚证。
 
-### 02.06.2022
+中俄关系不一样，中共与俄罗斯就是没有结婚证情况下，睡一觉给现金的勾搭关系。俄罗斯两个天然气管道，一个输送到欧洲，由于美国阻挠一直没搞成，另一个到中国，两个合同近万亿美元。现在，习近平变成了奶娘。俄罗斯GDP一年1万亿，之前从中国每年拿走1400亿，现在要达到2000亿。习近平上台前，中俄每年也就几十亿美元，偶尔达到上百亿美元，而且给普京个人的钱，是不算在中俄贸易清单中的。
 
-[外媒评述：北京冬奥会折射“中国梦”耀眼光芒\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/china/20220206/2468354.shtml)
+4）外交部、冬奥会中央8局、防疫中心紧急办公室同时报上去，普京的人有四个人染上病，还有人死亡，但死的人不是普京的人。后来又有十几个人染上病，普京很恼火，普京当时要求绝对保证安全的。还有俄罗斯使用人民币，中共承诺用黄金计算使用本位，若人民币贬值或消失，中共付给俄罗斯黄金。普京来参加冬奥会之后，中共不干了。普京说，我来之前，你们承诺好的，我来了你们就不干了。政客都一样，要么是可控制的骗子，要么是不可控制的骗子。普京去之前，郭先生就跟他说，中共怎么耍他，用什么理由，普京说只要有一条发生，他扭头就走，现在普京就走了。
 
-***简评：***我们无论身在国内国外，在中国这片土地上普通中国人还有“中国梦”吗？就我自己刚来美国上学打工时常在恶梦中惊醒，梦中常常梦到自己又回中国了，醒来时半天才回过神自己仍在美国，又感觉好庆幸，谁愿意回中共国，只要逃出中共国看到外面文明的世界，谁愿回去，韦石夏业良之类你让他们回中共国他们会回去吗，中共那可真是他们的衣食父母。中国老百姓改革了几十年也就混了个刚刚吃饱肚子，可自我感觉自己已经超英赶美了，那最现实一个问题，改革开放全民起早贪黑，7天24小时无保险无医疗辛勤劳动财富钱去那儿了，中国梦再辉煌再烂灿其体到落实到实物财富上得有具体体现吧。老百姓只收获了恶梦，中共梦只属于中共红色后代和红色的家奴们，他们拿走了中国人民所有的财富，也拿走中国人的美梦。
+5）普京女朋友到中国，一点不吃不喝中国的东西，她自己带着俄罗斯的食物，签完合同就走。她说，中国的食品都是化学物质。习近平做副主席时去俄罗斯访问，带给俄罗斯很多山珍海味，俄罗斯全部倒掉。
 
-### 02.06.2022
+6）参加北京冬奥会几乎没有任何有成就的运动员，只有个别有成就的，但也过了黄金期。战友负责采集DNA，所有参会人马桶的尿和大便都集中收集。原因是中共认为这些运动健儿的基因优秀。北朝鲜就采集到访北朝鲜的人的DNA，郭先生去朝鲜时就经历过。新中国联邦的战友主导了这次冬奥会的开幕式。让这些国家的运动员看清了中共，看清了冬奥会。
 
-[外媒：美政府研究人员称无需奥密克戎专用疫苗\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/health/20220206/2468374.shtml)
+7) 中共为什么开始答应给普京的，若人民币贬值，就给黄金结算，后来又反悔了呢？原因是中共的经济很差，已经做不到只一点，习近平是心有余而力不足。另外党内绝大多数人都认为，这是习近平本人的冬奥会，跟任何人没关系。那些天天在现场防疫，还有冬奥会的工作人员和官员，都不愿意，每天忙个臭死，还有病毒的危险，所以他们仇恨这次冬奥会。再有就是这次病毒已经到了无法想象的程度，很危险。
 
-***简评：***真相就是力量 ，新中囯联邦持续的向全世界传播病毒疫苗真相唤醒了正义的力量，世界黑暗力量再大，我们仍要相信在西方世界，雅典娜自由女神正义力量穿越千年，始终存在，真相大白天下时自由女神的火炬就会照亮一切黑暗。现在美国最高法院否定强制注射疫苗法规是这场持续己2年的病毒危机有了转折点，世界各国开始放弃强制疫苗令，病毒溯源将会成为全球聚焦点，全世界都会向中共追责，恶终是恶报。
+8）国际奥委会的腐败，都是跟申请奥运会和开奥运会有关，中共把国际奥委会变成了小姐。
 
-#   港台资讯
-![](https://media.discordapp.net/attachments/858887785507323904/939724031010156584/DC2.5-2.jpg?width=1040&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/939724037846872104/DC2.5-3.jpg?width=1040&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/939724038366961734/DC2.5-1.jpg?width=1040&amp;height=586)
+9）中共为什么对俄爹这么好？原因是共产主义的亲爹就是来自俄罗斯，现在俄罗斯共产党没有实权，但现在依然还是世界上的共产主义大本营之一。共产主义就是邪恶独裁的、不受法律约束的、打着“为人民服务”名义的奴隶制。真正的白人不愿意跟中共玩，它只能选择有点像白人的俄罗斯，俄罗斯还吃它这一套。俄罗斯愿意跟中共勾兑，然后中共忽悠中国人“咱们在世界上不孤独”。还有俄罗斯有武器的优越性，中共交朋友一定是交有钱有权的，所以看了一圈，最后只有俄罗斯最适合当中共的爹。
 
+10）第一个到中国做生意的山茂召，美国公使蒲安臣，还有最有名的罗斯福关于中国人性的报告，福布斯的报告中陈述：中国和美国人民一旦结合在一起，两国人民的优缺点互相补偿，这个世界将平安和谐。俄罗斯是世界上最会玩政治把柄的，玩政治黑社会全人类第一。共产党在俄罗斯搞武器交易、石油贸易交易，没有不拿巨额回扣的。
 
+11) 盘古CEO叫林强，林强和林弟哥俩的父亲是中共最高的情报头子，叔叔是派到联合国的第一任中国代表，叫林青，表妹是李小龙的情人丁佩，家里边祖爷是林则徐，哥俩回城是周恩来来派人接回来的，开着伏尔加轿车，然后一个去安全部，一个去了公安部，一个搞政治保卫，一个搞对美国情报。单伟建也是这种情况，那时中国下放知识青年六千多万，被下放的人能回到北京城还能出国，那是天大的事情，是佼佼者中的佼佼者，单伟建就是中共派出去的。那时中国已经从对俄关系要转到对美关系，中共知道，中共要强大，经济要好，中共要活下去，必须在美国下手，所以周恩来弄了中美大学生互换文化，中共派了100个女学生，到美国后都必须嫁给美国白人，嫁给谁都由党中央说了算，现在这些人在美国政坛还很活跃，在美国生了孩子。
 
+12）中国跟俄罗斯好就是作死，俄罗斯一共才1万亿美元的GDP，而中共从美国每年搞5000亿美元。美国产业链转移到中国，美国大量工厂关闭，大量美国人失业，美国发展高科技，但把轻工业生活产品的生产都移到了中国。联合国、世界各种NGO组织、国际奥委会、华尔街和好莱坞由于中共的独裁，这些人可以在中国享受到各种特权、性奴，这是他们在本国不敢享受也享受不到的，所以这些人都愿意跟中共打交道，这就是为什么西方的社交媒体、华尔街、好莱坞、奥林匹克组织、梵蒂冈、联合国，全军覆没，先在澳门赌一把，在香港国际化一把，再到大陆，中共给提供各种女人，到中国去都当了皇帝，还挣大钱，还被中共保护，所以没人挡得住。美国是唯一能让中国经济强大的国家，若中共疯了，跟美国干，中共必死无疑。现在中共威胁美国，让美国公司无偿把技术给中国，中国公司在美国造假、骗，还拒绝调查，拒绝配合，还想在美国玩中国的那套擀面杖子经济，美国是承受不了的。
 
-*编辑：*西北风
-*作图：信正
-发布：文顾*
+13）美国基金大佬玩的东西是普通人在任何社交媒体上都看不到的，现在这些基金大佬都在拼命的卖东西。某伦敦一基金大佬，郭先生的朋友，有一个房子，自己设计建造，花了11年的时间花了一个多亿建了自己的房子，现在他这个房子，还有他儿子苏黎世的房子都在卖，原因是他在美国投资的基金都将面临全面破产。更可悲的是他儿子打了三针疫苗。
+
+14） 川普没有任何心思灭共，他曾公开表达过。但是他敢于对中共的贸易冲突，是了不起的。之后中美之间出现了经济冲突，现在到了台湾这个问题上，谁都回避不了，共产党还放出了病毒。现在所有的冲突不再重要，摆在全球面前的就是疫苗和病毒大屠杀，怎么停止的问题。还有病毒和疫苗对世界经济的毁灭性打击。
+
+15) 宝马全面停产了，原因是芯片生产错了。中美之间不可调和的军事经济贸易冲突，又加上疫苗和供应链的挑战，美国的经济会好吗？共产党以为美国完了它就会好，实际上美国经济完蛋，最惨的就是中共国。美国在一百年前就发明了外包加工，美国是一个辐射性经济，美国若完，全世界都完。无知之后必须付出的代价，在习近平身上体现的淋漓尽致。冬奥会现场习近平穿的两层的防弹衣，就是完全没有脑子的体现，狙击手完全可以不打胸部，可以打脑袋。
+
+16）无论是普京还是叶利钦，都没想过要和美国开战，因为那是毁灭性的。
+
+17）病毒和疫苗灾难毁掉了供应链，美国的贪婪和美国精英跟中共的勾兑必将付出沉重的代价。美国会出现历史上从未有的经济大萧条和经济大崩溃。疫苗的次生灾难、疫苗导致的经济危机、政治危机、贸易危机、军事危机和金融危机会席卷全球，从今年的5月份开始。最后世界经济大崩溃，世界会找共产党算账。习近平及其周围人的下场比罗马尼亚的齐奥塞斯库还要惨。
+
+18）某将军说，若中共打台湾，他会尽可能把炮弹扔北京去。
+
+19） 单伟建、杨贝贝、吴征这样的人，在美国的渗透和影响的力量是很大的，郭先生在2017年烧掉的3份文件，即使当时交给美国政府，也不一定会起到多大的作用。郭先生跟美国的CIA和美国议员打过多次交道，给过他们多份文件，起的效果都不大。美国政府的官僚让人很无奈。共产党知道在美国犯罪，美国觉醒需要时间觉醒，所以中共才肆无忌惮。陈氏兄弟的很多文件都没有公布，无论哪个文件都会让美国拉起国家安全警报，包括孔子学院、千人计划、张首晟等等，这就是美国的制度，美国必然像珍珠港一样，被打痛醒悟后才会奋起反抗，最后必然获胜，只是代价有些大。共产党在美国利用美国的资本主义、重商主义、信仰丢失，来摧毁他们自己的法律。这是中共重伤西方的根本原因。
+
+20）疫苗灾难来临，对世界这么大的伤害，世界人民如果还不觉醒，也不是我们可以担心的事。新中国联邦一没军队，二没有银行，三没有奴役的人们，还受到中共的不断打压，新中国联邦现在干到这个程度已经很不错了。这是不可思议的。
+
+21）加拿大大卡车事件会引发政治冲突，甚至可能升级成暴动事件。关于大卡车运动，和不能在GTV直播大卡车运动的事情，郭先生之后发了一个盖特澄清：第一是不能、不要在GTV上打着爆料革命和新中国联邦的爆料革命的旗帜来支持；不允许支持大卡车司机搞暴力行动；第二，不允许鼓动搞暴力和参与暴力；最后一个，不允许在GTV上、在直播中发表观点说，该杀人该撞车等等，不允许煽动暴力。除此之外想咋播就咋播，播的越多越好。因为共产党就等着抓这个机会，然后无限放大，制造“爆料革命支持卡车司机暴力运动”之类的假新闻，引起世界排华。
+
+22）今年不开展新项目，避免无限扩张，最重要的就是阻止排华事件的发生。让国内各界战友得到真正的喜币和躺平币，做好GEDU，这是中国人未来的希望教育，会提供大量的币，让原新东方教育的中国老师加入GEDU，会得到原来1.5倍工资。
+
+23）郭先生谈起了自己人生中的三次“不举”。他的永高影视曾培养了很多的明星，其中一个非常可爱漂亮个子不高的女歌手曾唱《塞北的雪》，唱的特别好，这个女孩见到郭先生后想用身体贿赂他，但是没有感情前奏，郭先生不举，后来成了朋友，她后来离开了中国；还有一个也在力高影视签约的非常漂亮的女星，现在的世界巨星，当年脱光了聊到天亮，变成了好朋友；当年由于虚荣心，郭先生去梅地亚中心，在8964说了几句真话后来在中央电视台消失了一段时间的当年最火的某位女明星，比《火浴图》还漂亮，两人聊起了8964，那位女明星坐到了郭先生腿上，但郭先生不行。
+
+24）西方支持中共的暗黑势力一定会付出代价。
+
+25）郭先生见过河南台前县、范县现场买卖裸体女性，怕她们跑，不给她们穿衣服，还带着脚镣手铐。女学生只卖3000；卖500到1000的是结过扎不能生孩子、年龄偏大的。这些人被麻袋装走，河南山东人贩卖多数是四川湖北女孩，全村人都蹂躏够了再卖掉。购买者多数是50、60岁没有媳妇的老变态。郭先生夫人跟郭先生聊天说，在咱老家后院前院这样的最起码有六七个。
+
+26) 当时公安部李东生，想做一个拐卖人口的节目，拍摄小组回来后说没法拍，在河南摸底和当地公安在册的被贩卖的女性，仅仅河南就100多万。说实话的话，河南不愿意。这些共产党比谁都清楚。中共国公安部所谓破案率100%，事实上是不破不立，破了才立案。每年都有3-5百万人丢失，被干掉，找不到。中国人的器官几乎就是中共高官免费使用的工具。可以杀掉，不用付钱。中国女人是中国最惨的人群。以为中国女人有人权的，是最大的欺骗。中国很多穷困的山村，几个男人共用一个女人，多了去。新中国联邦愿意解救这些可怜的女性，目前没有方案，愿与大家一起努力。但中共不灭，这些事情就消灭不了。亨利小哥说他村里两年时间最少300来个，曾见过一个人贩子带进17个人，最小的14岁。那些女孩子被打的惨叫，没人管。
+
+27）吴仪说，在中国女性要出人头地，要不有色，让人睡，要不有个阴歹的心，啥都能干。女贪官抓起来的都比男的狠。
+
+28） 彭磊曾选美，Qmay也是被选中的人之一，他们就是选美的，然后看生辰八字。郭先生曾经说过的三个锦囊：一是“民心向郭、习亡岐山”；二是“利用病毒”；三是“制造货币”。锦囊已经都使用了，现在回想，太神奇了。
+
+29）中共在美国的渗透和影响力不容小觑，《美国竞争法案》中最关键的三四条都被取消，比如，若中共攻打台湾，账目自动公开，跟中共彻底脱钩，资产被自动查封，这些都没有放进法案中。
+
+*发布：翼族*
+
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
