--- a/gnews/38.md
+++ b/gnews/38.md
@@ -1,50 +1,26 @@
 ---
-title: 荷兰记者冬奥会直播被拖走
+title: 01/30⽂贵直播：疫苗是⼈类⼤屠杀、社交媒体⼤封杀（粤语配音）
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/1968126/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1967991/)
 
-作者：纽约香草山教育部 – Naughty(文行)， AT
+2022年1⽉30⽇⽂贵⼤直播：
 
-
-
-![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
-
-
-
-据荷兰媒体报道，2月4日，在北京举行的冬奥会开幕式上，一名正在直播的荷兰记者被一名中共国安保人员拖走。
-
-不久，美国、荷兰、马来西亚等媒体接连进行了报道。
-
-媒体披露的视频画面显示，几名安保官员包围了记者，其中一人在他站在离鸟巢不远的地方时强行抓住了他。
-
-尽管国际奥委会表示，这是一起孤立事件，不会影响外媒对奥运会的报道。但相关的荷兰媒体事后表示，在中共国参与报道的记者恐怕要经常面对这种情况。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide6-1.jpg)
-参考链接：
-[荷兰电视台记者报道北京冬奥会开幕式直播，被红袖彰生生推开了！全世界都看到了这一幕！ 这是真正的中国形象！](https://www.gettr.com/post/psk9pf20b7)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpeg)
-
-总编：飞虹
-编辑：文特
-校对/发稿：为真不破20
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+1. 疫苗是⼈类⼤屠杀、社交媒体⼤封杀
+2. 如果欧洲最后承认疫苗是灾难，世界的疫苗政治和疫苗经济⾺上就会来
+3. 普京和习太阳以为美国和欧洲无可能同时打赢两场战争，恰恰相反，政治家为了活
+下去他们⾃⼰都要搞战争
+4. 欧洲⼈意识到习近平给普京的两份 4600 亿和 4800 亿的合同扩张了俄罗斯的军事，
+助长了俄罗斯敢于出兵乌克兰，要阻⽌俄罗斯⻄扩，只有先打倒中共
+5. 如果中共⽤核武器，美国和欧洲 100%赢
+6. 华盛顿 17000 个医⽣联合签署拒绝强制疫苗，同时加拿⼤的⼤货⾞全部去了渥太华
+7. 只有爆料⾰命在全世界⼈⾯前说共产党释放的武汉病毒会失控、他们会搞香港遣返
+法、要在香港使⽤化学和⽣物武器
+8. 冠状病毒是⽬标对着⻄⽅的⽣化武器，美国总统听了七哥和班农的话，停⽌了中国
+的旅游令，进入紧急状态，让美国少死了很多人。生化病毒并不是真正的目的，疫苗
+才是真正的⽬的，美国的经济⼀定会有⼀个历史上前所未有的⼤爆破
 
 
-
-![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
-
-
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
