--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,17 +1,20 @@
 ---
-title: 樱花头条┃顶尖癌症专家：下一个流行病将是由疫苗引起的癌症
+title: 中央春晚的藏污纳垢
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968716/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968838/)
 
-撰稿：东京樱花团/樱花传媒
+#### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
+视频定位：BENJ1；WEI
 
-下一个疫情，将会是新冠逆苗引发癌症大爆增！ Dr RYAN C0LE 是爱达荷州前线诊治医院的总裁，是世界顶尖的癌症专家，他说: 最新有关逆苗的研究报告显示，新冠逆苗会降低人体(对抗癌变的)丅细胞的免疫功能，人体免疫系统遭到严重破坏，所以导致很多针针后的病人出现癌症⋯这是千真万确的科学实验结果! 可以肯定，下一个疫情，将会是新冠疫苗引发癌症大爆增！就连耶鲁大学癌症专家，Dr Harvey Risch 也指出这是四十年行医从未见过的癌症数字大爆发！
+*发布：陶子*
 
-信息来源：[https://gettr.com/post/psyxo3fc8e](https://gettr.com/post/psyxo3fc8e)
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
+[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-*编辑：东京樱花团/keyboard racing
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
