--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,41 +1,155 @@
 ---
-title: 不懂不信的人永远无法听懂七哥在清丰看守所经历的事情
+title: 中共与经济脱钩就是脱离了对老百姓的经济控制
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968776/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1968913/)
 
-G-TV视频链接：[https://gtv.org/video/id=61fee51bd90bdd2085a587ba](https://gtv.org/video/id=61fee51bd90bdd2085a587ba)
+[https://gtv.org/video/id=620055b0585ecc15d73e4b04](https://gtv.org/video/id=620055b0585ecc15d73e4b04)
 
-**郭文贵先生：**我在清丰看守所待过，我经历的事情很多。我昨天跟我这旁边的同事，我给他们讲了两段故事，他们吓一大跳，我说我当年在清丰看守所经历的故事。我出来以后很少跟人讲，因为什么？我跟人讲，人家觉得我神经病。
+一个劳斯莱斯发动机
+Un motor Rolls Royce
 
-再一个，跟不懂的人讲，就像咱现在直播一样，你跟一个八九十（岁）没有直播的人讲直播，他根本不懂，就这么简单的事他都不懂，他也不信。那你不懂不信的人，你就不用再去讲了，你把自己的事做好。
+还有一个美国通用的发动机
+Y un motor general de EE. UU
 
-字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
+你知道多少专利吗
+Sabes hay cuántos patentes
 
-编辑整理：Jacques；
+4000种专利
+4000 patentes
 
-字幕文件制作：知津；
+你申请完4000种专利
+Luego que termines de solicitar los 4000 patentes
 
-视频制作及上传：Cindy；
+大概需要50年
+Se necesita aproximadamente 50 años
 
-G-News发布：小满；
+而且你都能做得到, 就今天申请
+Y lo puedes hacer, lo solicitas hoy
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+一个大飞机的材料
+Los materiales para un gran avión
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+材料涉及上千种的专利
+Los materiales involucran miles de patentes
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+你错了, 你重新来一把
+Si te equivocas, debes comenzar de nuevo
 
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+一架飞机将近十几万种的高科技
+Casi cientos de miles de alta tecnología en un avión
 
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+所以它叫墓碑科技
+Por eso se llama tecnología de lápidas sepulcral
 
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+是西方通过一次次技术失败掉下来死人
+El que ha caído y muerto por fallas técnicas una y otra vez en el occidente
+一战二战之后搞起来的
+Logrado luego de la primera y segunda guerra mundial
 
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+你怎么给我长出来
+Cómo se hizo
 
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+他说919（中国商飞C919大型客机）一定要献礼, 十八大献礼
+Él dijo que el COMAC C919 debía ser un regalo, un regalo para el 18º Congreso Nacional del PCCh
 
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+我说你要18大能献上礼
+Digo que si puedes ofrecer el regalo en el 18º Congreso Nacional
+
+我说你把我用那飞机(机翼)什么的把我给砍了, 我都愿意
+Estoy dispuesto a que me mates con ese avión (ala) o algo así
+
+弄死我, 我第一个我说
+Mátame, fui el primero en decir
+
+你先把我给砸死了
+Mátame primero
+
+所以中国人什么都是假的
+Por eso todo es falso en los chinos
+
+所以你没有任何高科技
+Si no tienes ninguna alta tecnología
+
+你中国生产啥, 你告诉我
+Qué puede producir China, dime tú
+
+从甘肃到广西
+Desde Gansu hasta Guangxi
+
+中国除了给当官生产虫草
+Además de producir ophiocordyceps sinensis para funcionarios en China
+
+夜总会, 东北的烤鹅, 大饼子
+Discotecas, gansos Asado del Noreste, tortitas
+
+福建的吃蛇, 广东的吃蛇
+En Fujian y Guangdong comen serpientes
+
+还有什么蝙蝠
+Y que si murciélagos
+
+你告诉我你生产啥呀
+Dime qué vas a producir
+
+粮食大部分进口
+La mayoría de los alimentos son importados
+
+高科技几乎是零
+La alta tecnología es casi cero
+
+连圆珠笔芯都造不出来
+Ni siquiera puede hacer una recarga de bolígrafo
+
+马桶盖都造不出来
+Ni puede hacer una tapa de inodoro inteligente
+
+你穿的衣服几乎都是化学的
+Las ropas que usas casi todas son químicas
+
+你的水都是被污染的, 你告诉我你靠啥呀
+El agua es contaminada, dime con qué te puedes depender
+
+所以中国老百姓
+Por eso el pueblo chino
+
+你脱了钩
+Si te liberas
+
+你就是脱了假, 脱了险
+Significa que te libras de la falsedad y del peligro
+
+第三, 共产党脱了钩就脱啥呀
+Tercero, qué sucede si te liberas del Partido Comunista
+
+你们就脱了控
+Te liberas del control
+
+共产党就是用所谓的经济控制你
+El Partido Comunista te controla a través del llamado economía
+
+让你当奴隶
+Para que seas su esclavo
+
+* * *
+
+日期：02/03/2022
+原视频标题：中共与经济脱钩就是脱离了对老百姓的经济控制
+La desvinculación del PCCh de la economía significa romper con el control económico hacia el pueblo
+
+原视频日期：01/23/2022
+原视频网址：**[https://gettr.com/post/pq03fp1a85](https://gettr.com/post/pq03fp1a85)**
+任务编号：KC441（3573）
+视频时间段：0:00-02:05
+西听校：洛杉矶盘古农场- 霙霙（文霙）
+翻译：洛杉矶盘古农场- 小文萱
+翻译终校：洛杉矶盘古农场- 霙霙（文霙）
+字幕+视频制作：洛杉矶盘古农场-Jambo
+审片：洛杉矶盘古农场-银龙
+发布：洛杉矶盘古农场-恩典
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
