--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,23 +1,129 @@
 ---
-title: 为什么冬奥会筹备很久还会状况频频（二）
+title: 美国大使馆撤离, 不断不交弄死共产党
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968690/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1968797/)
 
-#### 整理：雅典娜速记组
-编辑：开智则立
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8-40～8-50～2.png)
-早在几个月以前，西方世界开始调查这次冬奥会所有奥林匹克委员会有多少人在中国拿到了利润。我告诉大家你看看，国际奥林匹克委员会有多少次换主席，什么萨马兰奇，多少次腐败。哪次腐败不都是跟申请奥运会和开奥运会有关系吗？我觉得人类有奥林匹克精神之外，奥林匹克之神在天上都会怒！就是中国共产党已经把奥林匹克国际组织体育组织变成了被威胁的一个小姐。
+[https://gtv.org/video/id=61ff3311d90bdd2085a5a09e](https://gtv.org/video/id=61ff3311d90bdd2085a5a09e)
 
-刚才亨利说为什么共产党这么买俄爹的事儿，我告诉大家，你不要想太具体了。第一，共产主义的亲爹就是俄罗斯的。现在俄罗斯的共产党虽然没有实权，但他还是世界上最大的共产主义大本营之一。共产主义就是邪恶的独裁的，不受法律约束的，以为人民服务为名义的奴隶组织。大家记得国际歌吗？封建杂乱的封建社会是吧？让他那个歌一唱，哇塞，你一唱歌让人认为自己都是奴隶，要砸奴隶主，我告诉你，俄罗斯就是奴隶主的创造者。中共国骨子里边儿，他对白人恨，但是人家西方的白人真不给你玩儿，没几个跟他玩儿的，他只能选择有点儿像白人的俄罗斯。而且俄罗斯又吃他这一套，愿意勾兑，又是共产主义的来源。然后他拿着这个东西忽悠中国人，咱在世界上不孤独。然后呢？特别是俄罗斯有这个武器的优越性，他就来了。
+接下来就是共产党
+El que sigue es el Partido Comunista
 
-*发布：开智则立*
+美国大使馆撤以后
+Después de que la embajada de los Estados Unidos se retirara
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+全世界都可以揍他
+El mundo entero podrá apuñalarlo
+
+什么概念我告诉大家
+En qué consiste esto, déjame decirles
+
+是美国在联合国, 在全世界面前
+Es EE. UU en las Naciones Unidas y frente a todo el mundo
+
+1979年建了大使馆
+En el año 1979 se construyó la embajada
+
+中美恢复建交
+China y EE. UU reanudan relaciones diplomáticas
+
+它才合法的有权把台湾(从联合国)踢出去
+De esta forma, tendrá el derecho legal de expulsar a Taiwán (de las Naciones Unidas)
+
+美国这次的撤离
+El retiro de EE. UU de esta vez
+
+授权撤离绝对不是绝交也不是断交
+El retiro autorizado definitivamente no es una ruptura ni un corte de relaciones diplomáticas
+
+美国人是跟它弄什么?
+¿Qué quiere hacer EE. UU con ellos?
+
+不断不交弄死它
+No cortar ni romper para causarle la muerte
+
+记住我今天第一个说
+Recuerda primero que dije hoy
+
+叫不断不交
+No es una ruptura ni un corte
+
+啥叫不断不交?
+¿En qué consiste esto?
+
+成天告诉你, 我要回来啦
+Se la pasa diciendo todo el día: “ya voy a regresar”
+
+甚至真的有人回去表现表现
+Incluso habrá personas que realmente regresará para actuar
+
+给我点这个, 给我点那个
+Dame esto, dame aquello
+
+看看南斯拉夫还有伊拉克当年大使馆发生什么
+Mira lo que pasó con las embajadas de Yugoslavia e Irak
+
+就是直接性的
+Fueron de manera directa
+
+就内部, 这是国家的政策
+Internamente, es política nacional
+
+跟两党都没关系
+No tiene relación con los dos partidos
+
+这是美国人的决定
+Esta fue la decisión de los estadounidenses
+
+千万记住, 这不是美国政治决定
+Deben recordar, esta no fue la decisión política de EE. UU
+
+这是美国国家安全的选择
+Fue una opción para la seguridad nacional estadounidense
+
+我再说一遍, 美国20年了
+Digo de nuevo, EE. UU tiene 20 años
+
+准备好就干掉这几个国家的政权
+Ya está preparado para eliminar los regímenes de estos países
+
+从来没停止过, 跟任何总统, 党派没关系
+Nunca había paralizado, no tiene relación con ningún presidente y partidismo
+
+这个行动就是告诉你
+Este movimiento te está diciendo
+
+我现在就不会断
+Ahora no romperé
+
+也不会交
+Tampoco cortaré
+
+不断不交弄死你
+No cortar ni romper para causarle la muerte
+
+你看共产党会被玩死
+Verás, el Partido Comunista será jugado hasta morir
+
+日期：02/04/2022
+原视频标题：美国大使馆撤离, 不断不交弄死共产党
+El retiro de la embajada de EE. UU; no cortar ni romper le causará la muerte al Partido Comunista
+
+* * *
+
+原视频日期：01/30/2022
+原视频网址：**[https://gettr.com/post/prcgn3e965](https://gettr.com/post/prcgn3e965)**
+任务编号：KC443（3643）
+视频时间段：0:00-01:32
+西听校：洛杉矶盘古农场- 霙霙（文霙）
+翻译：洛杉矶盘古农场- 小文萱
+翻译终校：洛杉矶盘古农场- 霙霙（文霙）
+字幕+视频制作：洛杉矶盘古农场-天涯行
+审片：洛杉矶盘古农场-银龙
+发布：洛杉矶盘古农场-恩典
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
