--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,43 +1,30 @@
 ---
-title: 大陆人到台湾的选边站和到香港的趾高气扬让人无地自容
+title: 首批美军抵达波兰增援北约应对俄乌危机
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968688/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1968782/)
 
-G-TV视频链接：[https://gtv.org/video/id=61fcb477d90bdd2085a4b77d](https://gtv.org/video/id=61fcb477d90bdd2085a4b77d)
+**撰稿：日本东京方舟农场 子辰**
 
-**郭文贵先生：**这就是我们现在中国人，到哪必须有个仇恨的目标。中国人到台湾去，我见太多了，“我是支持国民党的” “我是支持民进党的”，反正他得支持一边，跟你个蛋的事啊？你在大陆连个茅屎坑的蛆你都不是，你跑到台湾你选边站去，然后：“陈水扁算个毛啊？连战算个屁啊？”
+据大纪元2月6日报道，在俄乌关系紧张之际，首批增援北约（NATO）的美军于2月5日抵达波兰东南部的一个军事基地。
 
-咱们大陆人到那去了，你知道要点脸不要？你大陆连个连战，再坏，就连战那个毛儿再坏也比你强；陈水扁再坏，陈水扁拔根毛儿都比你腰粗，人家是民主过来的。咱们就大言不惭地跑到台湾去骂人家这骂人家那，你看那个不要脸，你看那个当官的样子。你见到大陆人到台湾去点评台湾民主的时候，兄弟姐妹们，你真的希望自己找一个真的是最肮脏的地方消失去，你觉得真的不想再回到大陆去了。
+据波兰军方发言人利普钦斯基（Przemyslaw Lipczynski）少校告诉波兰新闻社（PAP），一架载有美国指挥人员的小型Beechcraft C-12 Huron飞机于周六上午10点左右降落在热舒夫军事基地。该基地靠近波兰与乌克兰边界。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/7C8BF2BC-5F7B-4E21-98C5-D1E60D71398B_1_201_a.jpeg)（图片来自《大纪元》）
+利普钦斯基证实，约1700名驻扎在北卡罗来纳州的第82空降师士兵将空降波兰。这是一支精英快速反应部队，过去跟波兰军队在伊拉克、阿富汗共同执行任务。
 
-然后你看到香港，在香港的商店里边人家香港的服务员在那个名店给你跪下来服务的时候，大陆人那个嚣张，那个时候还点着烟，弹着烟灰，对人家那个文明礼貌的那种不尊重，你觉得真的是无地自容！所以说你知道什么叫文明啊——就知道香臭、知道真假、知道善恶。
+此前，美国总统拜登1月2日下令向波兰和罗马尼亚增派近3000名士兵，以保护东欧免遭乌克兰危机的潜在影响。
 
-字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
+与此同时，就在美国部队特遣队抵达之际，俄罗斯国防部宣布，它已派出一对具有远程核能力的轰炸机在莫斯科盟友白俄罗斯上空巡逻，白俄罗斯与波兰接壤。
 
-编辑整理：Jacques；
+据悉，俄罗斯一直否认有入侵乌克兰的计划，但在乌克兰边境附近部署了十多万名士兵。在过去的外交谈判中，俄罗斯一直要求北约不许东扩，包括北约承诺永不接纳乌克兰，否则俄罗斯可能会采取军事措施。
 
-字幕文件制作：知津；
+美国和北约都拒绝了俄罗斯的要求。俄罗斯总统普京则表态，莫斯科准备与华盛顿及其北约盟国进行更多会谈。
 
-视频制作及上传：Cindy；
+参考链接：
+[https://www.epochtimes.com/b5/22/2/5/n13557381.htm](https://www.epochtimes.com/b5/22/2/5/n13557381.htm)
 
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+素材采编：子辰
+编辑：青城道姑
+发布：文曦
 
  
 
