--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,24 +1,41 @@
 ---
-title: 2.6大直播后记：俄罗斯是奴隶主的创造者
+title: 不懂不信的人永远无法听懂七哥在清丰看守所经历的事情
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968673/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968776/)
 
-整理：Rianna
-编辑：Sadhu
+G-TV视频链接：[https://gtv.org/video/id=61fee51bd90bdd2085a587ba](https://gtv.org/video/id=61fee51bd90bdd2085a587ba)
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-3.png)
+**郭文贵先生：**我在清丰看守所待过，我经历的事情很多。我昨天跟我这旁边的同事，我给他们讲了两段故事，他们吓一大跳，我说我当年在清丰看守所经历的故事。我出来以后很少跟人讲，因为什么？我跟人讲，人家觉得我神经病。
 
+再一个，跟不懂的人讲，就像咱现在直播一样，你跟一个八九十（岁）没有直播的人讲直播，他根本不懂，就这么简单的事他都不懂，他也不信。那你不懂不信的人，你就不用再去讲了，你把自己的事做好。
 
-就像我说的，我们男女在一起，最后20秒谁都想多坚持20秒，能力不及。 就现在中国的经济啊，政治协调的能力不及，坚持不了20秒。就是好吃好喝的，这个他的钱，他的整个协调能力他都不济了。第二个就是在党内，对这次所谓的冬奥会是习太阳的，这是习本人冬奥会，跟任何人没关系，大家都恨，都是被绑架了。你觉得到现场工作人验病毒的人，天天没弄去表演的人只有那些朝阳群众，那些傻孩子们，穷苦老百姓们。 一辈子没有见摄像机的机会，逮住所谓上摄像机了，以为这个冬奥会就给自己开的，上去跳去，去变几个月，你就是个表演的奴隶。 是吧？剩下那些真的当官的，还有脑子的人，你包括那什么张艺谋这些人，他哪愿意参加这事儿，是吧？那么天天病毒的危险。恨得慌，就是内部的仇恨。 这是所谓习太阳的一人的表演啊！第三个原因就是现在整个国内的这个病毒啊，已经到了很咱大家无法想象的程度，就在内部的恐惧，和内部的这种病毒带来的这种威胁，对每个人。谁都不愿意干事，就像我说的，他说我吐在盘里，他照样吃了。就这帮人很多人都恨这帮运动员，那运动员我还得告诉他，你孙子，来来来，中国不错吧？你们就為了好菜来的，不是吗？ 我有好菜等着你呢！你等着啊！他没尿他一盘子就不错了。你们所谓到中国，你明知道这是一个虐待奴隶的地方。这是一个金钱交易的结果，你还往这儿冲，这些人骨子里面很多人是看不惯的，大家不要忘了，从啥时候开始的？你们不知道而已，你们所有手机上下载的被控制的那些APP里你不知道而已。 早在几个月以前，西方世界开始调查这次冬奥会所有奥林匹克委员会有多少人在中国拿到了利润。 我告诉大家你看看，国际奥林匹克委员会有多少次换主席，什么萨马兰奇，多少次腐败？哪次腐败不都是跟申请奥运会和开奥运会有关系吗？我觉得人类有奥林匹克精神以来，奥林匹克之神在上天都会怒啊！就是中国共产党已经把奥林匹克国际组织体育组织变成了在被威胁的一个小姐。刚才亨利说为什么共产党这么买俄爹的事儿啊。我告诉大家， 你不要想太具体了。 第一，共产主义的亲爹就是俄罗斯的。现在俄罗斯的共产党虽然没有实权，但他还是世界上最大的共产主义大本营之一。 共产主义就是邪恶的独裁的，不受法律约束的，以为人民服务为名义的奴隶组织。 大家记住了那国际歌吗？起来，起来，不愿做奴隶的人们……封建杂乱的封建的社会是吧？让他那个歌一唱，哇塞，你一唱歌让人认为自己都是奴隶，要砸奴隸主，我告訴你，唱歌的都是奴隶，俄罗斯就是奴隶主的创造者。 中共国骨子里边儿，他对白人恨，但是人家西方的白人真不给你玩儿，没几个跟他玩儿的。他只能选择，就是有点儿像白人的俄罗斯。 而且俄罗斯呢，又吃他这一套，愿意和你勾兑，又是共产主义的来源。然后他拿着这个东西忽悠中国人，咱在世界不孤独。 然后呢？特别是俄罗斯有这个武器的优越性，他就来了。如果俄罗斯人穿的吃的不是今天这个样子，像白人的生活方式和所谓的有托尔斯泰这样的大咖，啊，要是有什么喀秋莎走在莫斯科郊外的这些红歌，恩格斯列宁那个长相大胡子，共产党才不跟他玩儿。 共产党，就是找一个人得有的一个托词，名正言顺，而且让中国人觉得这个人种比咱强，这个朋友交的比咱棒。 中国人交朋友一定交有钱有权的，谁爱交穷人，包括你们！现在加入新中国联邦了你发现要交有信仰的人。在这过去你不交穷人，你认为这是正确的。中国（中共）的骨子里就是崇洋媚外，宠强欺弱。 所以这一系列的文化信仰宗教历史原因，就让共产党把俄爹，他摆来摆去。找了那么多爹这就是一个爹最合适。而且这个爹越虐他，虐他千遍啊不厌倦，他享受在其中。 那么共产党既无这个能力，他就是经济上无这个能力，组织能力加内部的仇恨，就会导致冬奥会今天你看到了荒唐的结果。 这些事情发生在中国老百姓上你不知道？ 你真的不知道？你觉得那3000多人的代表会到北京开会，他吃的就很好？没人尿他碗里边？我告诉你哪年都有。 你们是好好上网络查一查当年百度都报道过，在这个西山宾馆，有服务员所谓的家里有人上访，从这个辽宁的，由于上访的这个恼怒，给中央领导会场尿尿的事情你记住了吧？你去查这个，去百度。 这个人，就是葫芦岛人。我还跟他开个玩笑，我说你是来自于葫芦岛，葫芦岛是印钞票的地方，你上访还为了点钱啊？结果他跟我说，他说，七哥，我在京西宾馆，我逮着机会我就把这帮孙子给炸了，但是真是干不了。我们最后支出了40万块钱。 把他从监狱救出来。七哥在国内救助了多少人，你们查查去！
+字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
 
-**发布：**tianzhihuan
+编辑整理：Jacques；
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+字幕文件制作：知津；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
