--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,35 +1,25 @@
 ---
-title: 北京冬奥 差评如潮
+title: 水就是故事啊，男女没有水就完了
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968663/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968746/)
 
-撰稿：东京樱花团/待命（文晓）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-627.png)（图片源自本文链接）
-2月7日福布斯日本消息：参加北京奥运会的多国的奥运关系人士对中共作为东道国的所为提出了质疑，指谴责其对被隔离的运动员的非人道待遇、不合理规则、对外国媒体的压制。
+整理：雅典娜速记组
+编辑：tianzhihuan
 
-据路透社报道，2月6日，芬兰男子冰球队教练Jukka Jalonen指责中共不尊重冰球运动员的人权，说冰球运动员Marko Anttila在中共病毒（新冠病毒Covid-19）检测呈阳性后的隔离期间，没有适当的食物，被置于巨大的压力下。
+你要看到七哥小时候的照片你都得流水你不流水，你不正常。是吧？你极少第一句话哇塞，太酷了一副藐视天下这你七嫂今天看着我都那样了，是不是鼻子眼睛都流水是不是？你们你想想，但是这个本能啊。那么这个不让你说的话不让你做的事情就是西方文明最要做的事情，我为什么要说，基本上赔3000多万美元了，现在已经还是其未来一两年还会赔，哪有一个拿着钱要赔的，但我信，你看他钟仁，就是个最明显的例子。
 
-芬兰队医说，尽管18天前，安提拉的检测结果呈阳性，已不再被认为具有传染性。但中共国仍然强迫她接受隔离。
+钟仁是所有上直播孩子变化，你可以看得着每时每刻，包括在群里边聊天这孩子的境界呀，他都在升华，Rachel整个人就变了个人，猫本还穿着最老的Gfashion。但你看那种精神，这就叫fashion啊，只有我们雷蒙和带着logo，我们有来处啊，我们有去处，我们有，这是人最基本的，所以追求讲的太好了。好，继续，谢谢。嗯，刚刚我就是在想。好，谢谢，谢谢刚刚我就是在想这个我们Gfashion是现在是引领引领时尚的，在现在将来都会引领我们时尚的潮流。然后呢，刚刚郭先生说到这个情绪啊，我就是很很很明显的感觉到，就包括我们今天在座的4位嘉宾，可能都是经常有意无意的在压抑自己的情绪，甚至包括在家里的时候，像我以前经常跟父母聊天的时候，或者他们。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/水就是故事啊，男女没有水就完了.001.jpeg)
+2022年1月7日文贵大直播
 
-此外，5日，德国队负责人告诉记者，滑雪运动员Eric Frenzel被安置的条件是 “不可接受的”。他抱怨自己的房间很脏、食物质量差、没有WiFi可用。倒是这些问题在第二天得到了解决。
+*发布：tianzhihuan*
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-同样被强制隔离的比利时骨感女孩Kim Meieremans，周三在Instagram上发布了一段哭诉视频，称她已经连续两次检测呈阴性，以为自己会被解除隔离，但她却被隔离到了另一个地方。
-
-她哭着说，我甚至不知道我是否能再回到奥运村，不知道我是否要在孤立无援的情况下度过接下来的14天，我是否能参加比赛？
-
-同时，中共国政府对待外国媒体的态度也受到了质疑。 4日，当局强行带走了一名在体育场外直播报道的荷兰电视台记者。这名记者在推特上说，他和其他媒体同事曾多次被不明身份的人阻止报道。
-
-包括美国、英国和加拿大在内的许多国家已经宣布对奥运会进行外交抵制，拒绝派遣部长和官员去参加北京冬奥会，以抗议中共对维吾尔自治区、西藏和台湾的人权侵犯行为。
-
-维吾尔族奥运选手作为最后一名火炬手出现在4日的开幕式上，但专家批评说这是基于中国政府的某种意图。研究新疆问题的弗罗斯特堡州立大学准教授马海云告诉路透社，中共这是试图通过选择维吾尔族运动员作为火炬手，来回击西方对其种族灭绝和迫害的批评。
-
-笔者也想补充一句，中共特意选以为维吾尔族奥运选手作为最后一名火炬手，堪称”此地无银三百两”的惟妙惟肖的演绎！
-
-信息来源：[中国が「強制隔離の五輪選手」に非人道的扱い、各国が非難（Forbes JAPAN） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/2c346c3cb7b8bb4b65eeed2fe21da9cd835a0f01)
-
-*校对：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
