--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,20 +1,23 @@
 ---
-title: 邪恶中共又一罪
+title: 为什么冬奥会筹备很久还会状况频频（三）
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1968652/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968745/)
 
-撰稿：无名小卒
-编辑/校对：追着曙光跑
+#### 整理：雅典娜速记组
+编辑：开智则立
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8-40～8-50～3.png)
+如果俄罗斯人穿的吃的不是今天这个样子，像白人的生活方式和所谓的有托尔斯泰这样的大咖，有什么喀秋莎走在莫斯科郊外的这些红歌，恩格斯列宁那个长相大胡子，共产党才不跟他玩儿。共产党就是找一个托词，名正言顺，而且让中国人觉得这个人种比咱强，这个朋友交的比咱棒，中国 人交朋友一定交有钱有权的，谁爱交穷人！包括你们！现在加入新中国联邦了你发现要交有信仰的人，在这过去你不交穷人，你认为这是正确的。中国人的骨子里就是崇洋媚外，宠强欺弱。所以这一系列的文化、信仰、宗教、历史原因，就让共产党把他俄爹摆来摆去。找了那么多爹这个爹最合适。而且这个爹越虐他，虐他千遍不厌倦，他享受在其中。
 
-近日，关于发生在中共国江苏徐州丰县被锁脖囚禁近二十六年生有八孩的女子的事在网发酵了。这种事本不想评论，因为十多年前就看见过这样的案例。再联系到当时城市里铺天盖地的所谓“天眼”，却还时常看见小孩或妇女失踪的案子发生。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/WhatsApp-Image-2022-02-07-at-15.08.17.jpeg)图片来源：网络
-笔者所在城市，由于盗窃案、飞车抢夺案、街头行骗案多发，却鲜见侦破的。当时就开始怀疑“天眼”的作用了，只是那个时候还没看清中共之嘴脸。虽有持有怀疑却没往深处想，只觉得这国真的是人心坏了，整个社会世风日下人心不古的感觉。
+那么共产党既无这个能力，他经济上、组织上无这个能力，加上内部的仇恨，就导致了今天你看到的冬奥会荒唐的结果。这些事情发生中国老百姓不知道？你真的不知道？你觉得那3000多人的代表会到北京开会，他吃的就很好？没人尿他碗里边？我告诉你哪年都有。你们好好上网络查一查当年百度都报道过，在这个西山宾馆，有服务员所谓的家里有人上访，辽宁的，由于上访的恼怒，给中央领导会场尿尿的事情记得吧？你去百度查查这个人，就是葫芦岛人。我还跟他开玩笑我说你是来自于葫芦岛，葫芦岛是印钞票的地方，你上访还为了点儿钱啊？结果他跟我说：七哥，我在京西宾馆，我逮着机会我就把这帮孙子给炸了！但是真是干不了，我们最后支出了40万块钱，把他从监狱里救出来。哇塞，你一唱歌让人认为自己都是奴隶，要砸奴隶主，我告诉你，俄罗斯就是奴隶主的创造者。
 
-除了提高防范意识，更用心地看护好自己孩子（当时吾儿尚幼）外，晚上出门也是早早回家，怕晚了不安全，不会想到根源是啥？还有就是提醒一下周围人要小心而已。
+*发布：开智则立*
 
-直到2017年2月底3月初开始在微信看见了郭先生的爆料视频后，才慢慢明白了是什么原因导致人口贩卖在中共国大行其道。尽管之前笔者就有对政府的所作所为不满，却绝没想到它们是如此之邪恶。所以，现在面对网上发酵的被各种非人虐待的原名叫李莹的同胞的不幸遭遇时，竟无言以对。
-
-琢磨着中共国老百姓，特别是我们这些已经跟了爆料革命新中国联邦的人，除了跟随七哥消灭中共，别无选择。因为只要中共在，类似的骇人听闻的惨案就会不断发生，而且只会越演越烈！
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
