--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,25 +1,42 @@
 ---
-title: 中共国弃婴代表美国参赛 无耻媒体发寻亲任务
+title: 台湾外交部称俄中联合声明是对台湾主权的侮辱
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968637/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1968718/)
 
-撰稿：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-628.png)[图片来源](https://firstsportz.com/wont-track-down-my-biological-parents-us-skier-kai-owens-set-for-her-maiden-birth-country-visit-in-2022-winter-olympics/)
-北京冬奥会女子自由式滑雪猫跳项目，美国队阵中 17岁的亚裔选手凯·欧文丝(Kai Owens)，曾是来自中共国的弃婴，如今代表美国参赛，中共无耻媒体还发起了寻亲任务。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/New_Project-2.jpg)资料图
+台湾英文新闻2022年02月05日台北报道，台湾外交部周六（2月5日）谴责俄罗斯和中共国当天发表的联合声明，称其试图取消台湾主权的合法性。
 
-欧文丝2004年出生在安徽省的六安市，但出生后就遭弃养，她在1岁4个月大时，经由社福机构的安排，获得美国科罗拉多州的一对夫妇收养。受到养父母的影响，她从小就在有雪场上滑冰，2020-21赛季，的世界排名高居第4。
+在一份关于国际关系和全球可持续发展的联合声明中，俄罗斯重申其对“一个中国”原则的支持，并表示反对台湾独立。
 
-当欧文丝入选美国奥运代表队，确定能到北京出赛时，她在Instagram 发出了信息，欧文丝表示，“我仍然不知道我的父母是谁，这可能涉及一胎化的政策。”
+此外，俄罗斯和中共国表示，“倡导民主和人权不能被用来对其他国家施加压力”，并表示反对在保护民主和人权的幌子下干涉主权国家的内政。两国还敦促国际社会“尊重文化和文明的多样性，以及不同国家人民的自决权”。
 
-不少媒体都报导欧文丝的故事，中共国《安徽商报》还无耻的提出呼吁：“家长们不要错过​​这个机会，若有看到报导，请联系我们。”展开为欧文丝寻亲的任务。
+根据台湾外交部的一份新闻稿，外交部回应说，中共国从未统治过台湾，并强调只有由台湾人自由选举产生的政府才能在国际上代表这个国家。外交部说，无论中共政府如何试图歪曲其对台湾的看法，它都无法改变这一事实。
 
-中共国几十年计划生育邪恶政策导致无数儿童被遗弃，被杀害，其中绝大多数为女婴，中共无良媒体何时为她们这么热情地寻亲过？如今欧文丝成为美国精英运动员了，像《安徽商报》这种中共媒体，不去反思计划生育这种灭绝人性的恶政给中国人民带来的伤害，居然恬不知耻的搞起寻亲任务，简直令人作呕。
+外交部说，中共国无权在世界上代表台湾，它不应该强迫其他国家、国际组织和国际公司违背其意愿支持“编造的”“一个中国”原则。它将中共继续谎称“台湾属于中华人民共和国”的说法称为中共国的虚假信息运动的一部分。
 
-消息来源：[冬奧》中國棄嬰竟成美國代表隊 17歲歐文絲故事有洋葱](https://tw.news.yahoo.com/%E5%86%AC%E5%A5%A7-%E4%B8%AD%E5%9C%8B%E6%A3%84%E5%AC%B0%E7%AB%9F%E6%88%90%E7%BE%8E%E5%9C%8B%E4%BB%A3%E8%A1%A8%E9%9A%8A-17%E6%AD%B2%E6%AD%90%E6%96%87%E7%B5%B2%E6%95%85%E4%BA%8B%E6%9C%89%E6%B4%8B%E8%91%B1-165128302.html)
+台湾外交部指责中共国利用与俄罗斯的双边会谈来推动专制主义的扩张，是对“奥林匹克五环的侮辱”。它补充说，“世界认识到中共政权的侵略、扩张和破坏和平的狰狞面目”。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+简评：
+
+中共在中俄发表这个联合声明上面花了天价的钱，为俄罗斯能与中共共同署名站队，据说中共支付了俄罗斯1000亿美金，这些钱都来自与中共国的老百姓。在这样的政府统治下，中共国还有无数个杨改兰在为每天的生存挣扎中。中共提出的所谓‘一个中国’原则本身就是十分可笑的，历史告诉我们真正将中国一分为二的就是中共。是中共在二战唆使日本入侵中国，挑起日本与国民党军队的大战，而自己躲在山沟里面通过女色，谎言，画大饼欺骗无数的穷苦农民加入共产党为自己当炮灰。等到二战结束，日本战败退出中国，国民党元气大伤，而中共坐收渔翁之利乘势反击国民党，最终夺取了中共大陆的控制权。而历史又再一次告诉了我们，在中共掌权后，中国老百姓的苦难才真正的开始了，参与朝鲜战争，100万投降共产党的国民党军队被当炮灰，共产党又枪杀地主，没收土地分给自己，在大丰收的情况下又引发大饥荒，中国人民死了千千万，党内斗争造成文化大革命，各种批斗武斗，中国人民又死了千千万。为了毛泽东的一句话‘人多力量大’疯狂鼓励生育，又为中共在国际上的脸面施行‘一胎政策’，亿万的胎儿被强制扼杀在胎腹中，现在又担心以后奴隶不够用开放‘二胎’‘三胎’政策，中共像对待畜生一样将中国人玩弄于鼓掌之中。现在又想去玩弄台湾人，中共的所作所为真是人神共愤，中共就是比恐怖份子还要邪恶的恐怖份子，中共政权不除，全世界将永远没有安宁。
+
+新闻链接:[https://www.taiwannews.com.tw/en/news/4432321](https://www.taiwannews.com.tw/en/news/4432321)
+
+翻译/简评: kkoto(芬兰大灰狼)
+
+PR:Harvey（叶知秋）
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
