--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,48 +1,43 @@
 ---
-title: 蟾宫曲：冬奥三部曲——冬奥会～冬眠会～冬葬会
+title: 经历千年万年也扼杀不掉爆料革命五年来七哥的直播视频
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1968758/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968904/)
 
-作者：蝴蝶泉
-![](https://assets.gnews.org/wp-content/uploads/2022/02/images-3.jpeg)
-前言：2022年2月4日、2月6日文贵大直播，以及2月5日文贵先生盖特短视频里，文贵先生都及时地向全球通报了北京冬奥会开幕式及后续的非常状况。人气冷、病毒危、管理乱……把象征奥林匹克精神的，最能展现人类生命活力的隆重大赛办成死气沉沉的大会！让全球人目睹到一个事实，中共真的完蛋了！遂作曲如下：
+G-TV视频链接：[https://gtv.org/video/id=6200855e585ecc15d73e5c8e](https://gtv.org/video/id=6200855e585ecc15d73e5c8e)
 
-万年没办冬奥，终办冬奥，办了悔懊。
-塞北无雪，炮造毒雪，捉奸通告。
-美携五十国撤使，邀百国只零头到。                            
-普京闪离，标杆断掉。
-隔离重重，冬眠正妙！
+**郭文贵先生：**这就是对生命的理解。你想想65岁，我（距离）65岁我现在还有十几年，还有十二三年，多少天？5000天，严格讲还不到5000天，4000来天，七哥就嗝屁了走人了，按照人间的说法，我再活50年，1万多天，又能咋地呢？随便中央公园的一棵树都比咱活得时间长，对吧？一切都不会是（你的），你也带不走。
 
-举国欢庆冬奥，刚庆冬奥，病毒胡闹。
-俄爹随团，16人中毒，隔邻命暴。
-狙击手头儿猝死，主席台大佬吓尿。
-二百刚染，一百又到。
-啥赛最火？送葬最俏！
+但是七哥这五年来直播的视频你想给我扼杀了？万年你也扼杀不掉，包括咱现在此时此刻说的话，那未来得多少人听？多少人看？他们怎么理解？“当时的那个巴黎好漂亮啊！而且叫‘水多’，旁边的大牛跟她双修啥感觉？”大家都会怀疑；然后：“罗西的老师是谁呀？”后来都要了解了解；（画面）上面那个佳佳和王子两口子，“他俩双修啥样啊？”都会研究研究；“雅各为啥出来爆料啊？”
 
-词释意：
+这个是万年千年不会变的，这个就是我们的伟大呀，对吧？所以说巴黎，不要在乎时间，65年和75年、85年、1000年没什么差距，瞬间即过。时间是蒙住你眼、蒙住真相的一个工具，跨过时间以后你就是永恒、永生。谢谢！
 
-中国大地万年来没有办过冬奥会，千方百计好不容易争取到举办冬奥会的资格，可是费了九牛二虎之力筹备，还没开始，就后悔死了，但退无可退，只有拉着破车自生自灭吧！
+字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
 
-先是，塞北的雪不配合下，没有足够的雪，就准备了百万造雪弹，轰炸天空去求化学污染雪。哪知道新中国联邦早早获得了这个“造毒雪”的情报，把中共的奸计昭告全球尽晓。
+编辑整理：Jacques；
 
-接着，冬奥会开幕式前，美国直接宣布外交撤离，紧跟着至少五十国使馆也纷纷撤离中共国。而且，中共外交部吹嘘的将有一百三十多国来参加庆贺，可开幕式到场的真正国家元首不足五人，连当初向全球夸下海口的零头都不到。
+字幕文件制作：知津；
 
-然后，普金说好的收千亿美金，逗留北京48～56小时，签署二十余个合同，却待了9小时愤然离去，最重要的俄接纳人民币为第二法币的合同也不签了。普金是中共视为全天候战略伙伴关系中的标杆，是给北京冬奥会撑场子的，这下杆也倒了，场子也撑不下去了。
+视频制作及上传：Cindy；
 
-再就是看看整个冬奥会场馆以及运动员们的安置场所，设置层层隔离，没有自由，没有尊重………人心冷却，身陷桎梏，这样的冬奥会变成了一场绝妙的冬眠会！
+G-News发布：小满；
 
-正当中共国全国上下正在欢庆冬奥会到来的时候，刚刚在开幕式前一小时左右，病毒也开始胡闹了。
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
 
-首先是俄罗斯普金随从团队下榻的华尔道夫酒店病毒出场了，普金随从有16人染病，同时酒店有3名外国人染病毒当场痉挛抽搐暴死。
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-而且，负责奥运会主席台安保的狙击手头目，在经过盘古时突然倒地而亡，据说是打了疫苗暴毙。这把坐在主席台上的“大佬们”吓得屁滚尿流的。
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
 
-还有，那些为奥运会开幕式彩排上场的群众演员们，包括孩子们，被检测出有200多人感染了，正送去隔离，半路上又听到急报又100多人查出感染了……
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
 
-这样的病毒感染无处不在，防不胜防，大国的集中办大事能力在小小的病毒面前不管用了。感染、死亡，成为了冬奥会避无可避的恐怖现实，这个造病毒的毒窝里，病毒们简直摇身一变成了运动员，都在跃跃欲试，感染只会越远越烈，染病和死亡将会随处可见。要说冬奥会上哪个赛事最火呢？恐怕会是病毒们争先恐后去感染人，为人送葬的比赛最火最震撼人心吧！
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
 
-审核校对：Barry Jack
-上传排版：F
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
