--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,25 +1,40 @@
 ---
-title: 澳防长预警：如不对抗中共 澳将失去未来十年
+title: 殡葬产业人揭示中共病毒疫苗造成的大量死亡
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968636/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1968717/)
 
-整理编辑：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-625.png)[图片来源](https://asiapowerwatch.com/will-the-real-china-please-stand-up/)
-澳大利亚国防部长皮特·杜登（Peter Dutton）警告，澳大利亚及其盟国必须在南海议题上挺身抵抗中共国，否则将会“失去未来十年”。
+撰稿：妇女之友-电流声
 
-悉尼晨驱报2月7日头版报导，标题为“杜登表示我们必须挺身面对中共国”。杜登说，美国及其盟国过去一度采取“默许”态度，任由中共国在主权有争议的南海航道上兴建人工岛，以及在珊瑚礁上兴建防卫基地。
+澳大利亚悉尼不愿意透露姓名的这位从事殡葬产业的女士，不无痛心地告诫人们，尤其是父母亲们，千万不要给孩子打中共病毒疫苗了！
 
-杜登认为，为了确保中共国不会重覆过去十年将南海军事化的做法，澳大利亚及盟国需要向中共国表明立场；他说，假如任由目前情况发展下去，澳洲及盟国将会“失去下一个十年”。
+中共病毒疫苗造成的大量死亡：婴儿死亡，年轻人，心脏病，中风，血栓……
 
-“四方安全对话”（Quad）外长会议将于本周在墨尔本举行，杜登发言与此有关。悉尼晨驱报表示，预料“四方安全对话”外长会议将会讨论美、日、澳、印四国该如何加强防卫及经济发展合作，以便对抗中共国。
+殡仪馆已经处理不过来。有些地方买新的冰柜（装尸体），一个冰柜可以装20具尸体，八个冰柜装了160具尸体。
 
-报导提到，专家认为，为了协助维护印太地区和平，澳洲未来国防预算势必要增加。澳洲去年国防预算为446亿澳元，占澳洲国内生产毛额（GDP）2.1%；对于澳洲军力是否足以协助维护印太地区和平，已引起防卫专家的担心。
+大量孩子死亡，千万不要给孩子扎针了。她100%肯定一大波儿死亡正在靠近，但大多数人还没有意识到这个问题。
 
-消息来源：[**澳洲防長：南海議題須抵抗中國大陸 否則失去未來十年**](https://tw.news.yahoo.com/%E6%BE%B3%E6%B4%B2%E9%98%B2%E9%95%B7%EF%BC%9A%E5%8D%97%E6%B5%B7%E8%AD%B0%E9%A1%8C%E9%A0%88%E6%8A%B5%E6%8A%97%E4%B8%AD%E5%9C%8B%E5%A4%A7%E9%99%B8-%E5%90%A6%E5%89%87%E5%A4%B1%E5%8E%BB%E6%9C%AA%E4%BE%86%E5%8D%81%E5%B9%B4-022318642.ht)
+1月27日，在昆州的黄金海岸一家接种中共病毒疫苗的诊所里，惨剧再度发生！据凯恩斯新闻报道，上午9：30分一位母亲领着3个6-10岁的女儿来接种了中共病毒疫苗。约接种后30分钟左右，其中一个女孩突然手和面部开始抽搐，脖子僵直。紧接着不到30秒，另一个约9岁的女孩又发生了同样的症状，第三个女孩还不清楚会发生什么。当天下午约5：30-6：00左右闻得噩耗，这两个约6-10岁的小女孩已经死去。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+还有，在新南威尔士州被诊断出患有中共病毒并去世的18人中：
+
+1位40多岁
+
+3位60多岁
+
+4位70多岁
+
+6位80多岁
+
+4位90多岁
+
+2人打了三针；14人打过两次中共病毒疫苗；1人打了一针；一人没有打。
+
+18人死者中，17人打了中共病毒疫苗！
+
+参考来源：[https://discord.com/channels/@me/874996068595667016/940074298037661726](https://discord.com/channels/@me/874996068595667016/940074298037661726)
+
+*编辑&发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
