--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,35 +1,17 @@
 ---
-title: 美国众议院通过《美国竞争法》法案
+title: 樱花头条┃顶尖癌症专家：下一个流行病将是由疫苗引起的癌症
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1968597/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968716/)
 
-**【雅典娜快讯】，紧贴时代脉搏**
+撰稿：东京樱花团/樱花传媒
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/pelosi-COMPETES-Act.png)Courthouse News Service
+下一个疫情，将会是新冠逆苗引发癌症大爆增！ Dr RYAN C0LE 是爱达荷州前线诊治医院的总裁，是世界顶尖的癌症专家，他说: 最新有关逆苗的研究报告显示，新冠逆苗会降低人体(对抗癌变的)丅细胞的免疫功能，人体免疫系统遭到严重破坏，所以导致很多针针后的病人出现癌症⋯这是千真万确的科学实验结果! 可以肯定，下一个疫情，将会是新冠疫苗引发癌症大爆增！就连耶鲁大学癌症专家，Dr Harvey Risch 也指出这是四十年行医从未见过的癌症数字大爆发！
 
+信息来源：[https://gettr.com/post/psyxo3fc8e](https://gettr.com/post/psyxo3fc8e)
 
-**整理：**Eileen（围剿维尼熊）
-**编辑：**翼族
-
-根据《联合报》报道：美国联邦众议院2月4日表决通过《美国竞争法》（America COMPETES Act），斥资三千五百亿美元推动美国半导体产业，强化美国对中国大陆的竞争力。法案同时呼吁行政部门将“驻美国台北经济文化代表处”（TECRO）更名为“台湾代表处”（Taiwan Representative Office）。
-
-商务部长雷蒙多称，这是五十年来促进美国竞争力、制造和研发能力的最大投资案。众院科学委员会主席强森表示，这将可帮助美国与中共国“大干一场”。
-
-众议院通过法案后，下一步就是参众两院整合版本，分别取得多数议员支持后，才能送交白宫由拜登签署实施。
-
-法案涵盖多项与台湾相关的条款，包括强化美台伙伴关系、协助台湾发展不对称防卫能力、协助台湾有意义参与包括世界卫生大会（WHA）等国际组织、强化美台双边经贸与科技合作。
-
-**参考链接**：[美眾院通過抗中挺台法案](https://udn.com/news/story/6813/6078352?from=udn-catebreaknews_ch2)
-
-*发布：*翼族
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*编辑：东京樱花团/keyboard racing
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
