--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,22 +1,31 @@
 ---
-title: 为什么冬奥会筹备很久还会状况频频（一）
+title: 渥太华市长宣布进入紧急状态 以应对卡车运输的封锁
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968566/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968664/)
 
-#### 整理：雅典娜速记组
-编辑：开智则立
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8-40～8-50～1.png)
-很简单，就像我说男女在一起最后谁都想再多坚持20秒，但能力不及。现在中国的经济、政治协调的能力不及，坚持不了20秒，他的钱、他的整个协调的能力都不济了。第二个就是在党内，对这次所谓的冬奥会是习太阳的，这是习本人的冬奥会，跟任何人没关系，大家都恨，都是被绑架了，你觉得验病毒的现场工作人员天天被弄去表演的人只有那些朝阳群众？那些傻孩子们，穷苦老百姓们，一辈子没有见摄像机的机会，逮住所谓上摄像机了，以为这个冬奥会是给自己开的上去跳，就是个表演的奴隶。剩下那些真的当官的，还有脑子的人，你包括什么张艺谋这些人，他哪愿意参加这事儿是吧？天天病毒的危险。恨啊！就是内部的仇恨！这是所谓习太阳一人的表演啊！第三个原因就是现在整个国内的病毒，已经到了大家无法想象的程度，在内部的恐惧和病毒带来的这种威胁，对每个人。谁愿意干这儿？就这帮人很多都恨这帮运动员，心理告诉他们：孙子，来来来，中国不错吧？你们就为了好菜来的，我有好菜等着你呢，你等着。没给他尿一盘子就不错了。你们所谓到中国，你明知道这是一个虐待奴隶的地方。这是金钱交易的结果，你还往这儿冲，这些人骨子里面很多人是看不惯的，大家不要忘了，从啥时候开始的？你们不知道而已，你在你们所有手机上下载的被控制的那些APP里，你不知道而已！
+撰稿：东京樱花团/asket
 
-*发布：开智则立*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/渥太华市长宣布进入紧急状态-以应对卡车运输的封锁.png)[**图片来源**](https://www.aljazeera.com/news/2022/2/7/emergency-in-ottawa-over-out-of-control-truckers-protest%20)
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+渥太华市长吉姆-沃森周日宣布进入紧急状态，以处理抗议的卡车司机为期10天的空前占领。卡车司机队伍已封锁了加拿大首都的大部分中心。沃森在一份声明中强调需要其他管辖区和各级政府的支持。沃森在当天早些时候说，示威者的人数超过了警察，并控制了局势，他没有详细说明他可能采取的措施。
 
+“自由卡车车队 “的抗议活动最初是由对穿越美加边境的卡车司机发起的，他们因抗议强制接种疫苗政策而自发组织队伍，但现在演变成对COVID-19健康限制和总理贾斯汀-特鲁多政府的更广泛抗议。
+
+加拿大公共安全部长马可-门迪奇诺星期天说，政府在这个问题上不会退缩。渥太华警方周日重新安置了一些抗议者，并设置了新的路障，称他们正在 “收集财务、数字、车辆登记……以及其他将用于刑事起诉的证据”。他们还宣布，他们将取缔试图携带油罐为封锁市中心大部分道路的，数百辆大卡车加油的行为。
+
+周六，在与渥太华官员的紧急会议上，警察局长彼得-斯洛利抱怨说，他缺乏资源来结束他所谓的 “围困”，并要求增援。大约250名加拿大皇家骑警，一支联邦部队，将很快抵达该市。
+
+而市议会议员戴安-迪恩斯周六在谈到抗议者时，定义卡车司机队为”这是一个全国性的叛乱。这是疯狂的”。
+
+加拿大民间和官方各有各的立场，可以看到加拿大社会的撕裂。郭先生在直播中提醒大家，不要以新中国联邦的名义参加任何卡车司机运动，以免重演如2021年1月6日美国华盛顿的“暴乱”运动。
+
+信息来源：
+
+[**渥太华市长宣布进入紧急状态 以应对卡车运输的封锁**](https://www.aljazeera.com/news/2022/2/7/emergency-in-ottawa-over-out-of-control-truckers-protest%20)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
