--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,21 +1,20 @@
 ---
-title: 篮球明星坎特再开炮 北京冬奥网络收视少上届43％
+title: 秘翻在线：美武器供应商研发空投物资的无人滑翔机
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968547/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968644/)
 
-撰稿：东京樱花团/asket
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-623.png)图片来自本文链接
-2月7日，篮球明星坎特再度于脸书开炮，指称2022北京冬奥的开幕式仅有16Ｍ（1,600万）人观看，并且全时段直播的观众人数都很少。相较于上一次2018年2月的平昌冬奥有28.3M（2,830万）的观看人数，北京冬奥低了43％。
+**撰稿：billwilliam**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screenshot-2022-02-07-134431.jpg)图源：flightglobal.com
+据《国家利益》报道，一家名为“沉默之箭”（Silent Arrow）的武器供应商研发一款具有滑翔能力的GD-2000空投箱，用来在战场上向士兵空投物资。
 
-坎特也直接怒呛北京称，“这就是你们把田径比赛变成替邪恶帝国作政治宣传的结果”（This is what you get for turning athletics into propaganda for an EVIL EMPIRE）。
+这款GD-2000一次性空投箱其实就是带有折叠翅膀的箱子，尺寸为2x2x8英尺，可携带16000磅重的负荷。从运输机空中投放后，折叠翅膀打开进行滑翔，利用GPS制导和LiDAR测距仪抵达目标投放点。从25000英尺的空中投放后，空投箱可滑翔飞行40英里。直升机投放也可滑翔15英里（未公布投放高度）。GD-2000空投箱可携带食品、燃料、武器等物资。“沉默之箭”公司希望未来能扩大空投箱，达到可以向一支步兵队伍提供一天正面激烈战斗所需的物资。除了无动力滑翔箱以外，该公司还生产一种有动力的版本，配有180马力电动机，可以从临时跑道起飞。
 
-事实上，坎特这几日都未曾停止在脸书挞伐中共，他持续在贴文中表示“人们要我专注在篮球上，不要搞政治，但我从未搞政治，政治和人权存在著差别”。“我们不能在面对不正义时保持沉默，世界需要清醒起来，认知到中国共产党并不是我们的朋友”。坎特过去曾多次就新疆、彭帅等问题批评中共，日前更杠上中共篮球协会主席的姚明，不仅指姚明封锁自己IG的行为很像小孩，还酸其“身高高心眼小”，喊话姚明“停止当中共的傀儡”。
+GD-2000的优点在于其紧凑的外形和无声的隐蔽滑翔能力，不易被敌方探测。同时，其较远的滑翔距离允许运输机在远距离外投放，保证对峙中的安全。据称美国在中东的一个盟国政府近日首次在海外执行任务中使用GD-2000空投箱。该公司公告称他们在37个国家有分销协议，并致力于成为全球空投物资的标准。
 
-信息源：[澳大利亚在经过近两年的边境关闭后 终于将对国际游客开放](https://www.mirrormedia.mg/story/20220207edi026/)
+这款空投箱可能在未来台海局势中发挥作用，如果战争爆发，美军运输机可以在较远的距离空中投放武器和物资给台湾。
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+**[信息来源](https://nationalinterest.org/blog/buzz/resupply-gliders-could-be-future-military-logistics-200349)**
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
