--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,21 +1,16 @@
 ---
-title: 雅典娜时报-第197期
+title: 喜支付将有多种币可支付
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1968467/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968490/)
 
-#### **《雅典娜时报》汇聚全球新闻时事**
+文编：东京樱花团/樱花传媒
+视频：东京樱花团/中文小视频组
 
-#### 编辑：精灵蓝
-排版：小蚂蚁614
-![圖片](https://media.discordapp.net/attachments/825592691433668612/940055590200291358/155_4.png?width=768&amp;height=1144)![圖片](https://media.discordapp.net/attachments/825592691433668612/940055590787481621/155_3.png?width=768&amp;height=1144)
-*发布：陶子*
+2月4日，郭文贵先生在GTV大直播透露，在中共国，不会超过一年时间，H-Pay的人民币支付功能即可实现。转进转出的资金秒到账户，给战友们带来惊喜的同时，中共追踪不到资金的进出，安全稳定的H-Pay还支持多币（种）支付 。
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*编辑：东京樱花团/tdownc2p
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
