--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,174 +1,11 @@
 ---
-title: 达沃斯党和共产党的信仰是统治全球，新中国联邦的信仰是消灭共产党
+title: 参议员卢比奥担忧美国运动员和记者的安全
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1968753/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1968893/)
 
-[https://gtv.org/video/id=61ff32b5d90bdd2085a5a077](https://gtv.org/video/id=61ff32b5d90bdd2085a5a077)
+02/02/2022 参议员卢比奥担忧美国运动员和记者的安全，并表示举办这届奥运会的，显而易见是一个犯下种族灭绝罪行的政府。
 
-那共产党和达沃斯现在所有追求的宗旨是一样的
-El propósito que persiguen el Partido Comunista y Davos es el mismo
-
-所以达沃斯人认可社会的社会主义
-Por eso la gente de Davos aprueba el socialismo de la sociedad
-
-认可共产主义
-Aprueba el Comunismo
-
-而且你不要忘了
-Y no olvides
-
-这些人所谓的达沃斯思想和共产主义思想
-Las llamadas ideas de Davos e ideas comunistas de estas personas
-
-就是封建社会
-Es la sociedad feudal
-
-过去的奴隶主
-Antiguo dueño de esclavos
-
-和所谓的马克思, 恩格斯, 列宁来的地方
-Y el llamado de donde vinieron Marx, Engels y Lenin
-
-包括很多犹太民族, 过去诞生的各种宗教
-Incluyendo muchos pueblos judíos, varias religiones nacidas en el pasado
-
-还有共济会
-Y la masonería
-
-你记住所有你知道的各种会
-Recuerda todas las instituciones que sepas
-
-都是邪恶的
-Son malvadas
-
-这些背后的沼泽地, 其中的分支
-Y el pantano que está detrás de esto, una de sus ramas
-就像现在新中国联邦
-Así como el Nuevo Estado Federal de China de ahora
-
-不管你多伟大
-No importa qué tan grandioso seas
-
-你是某个农场的
-Perteneces de alguna finca
-
-你到新中国联邦前, 你叫宁南是吧
-Antes de entrar al Nuevo Estado Federal de China, te llamas Ning Nan cierto
-
-你叫Alice, 你叫Tiger, 你叫Rosemary
-Tu nombre es Alice, tu nombre es Tiger y tu nombre es Rosemary
-
-不管你罗伊有多大
-No importa la edad que tengas Roy
-
-罗伊你长多高
-O qué tan alto es Roy
-
-给你编造啥故事出来
-Qué historia puedas inventar
-
-你也是新中国联邦农场的
-También eres de la finca del Nuevo Estado Federal de China
-
-新中国联邦是什么
-Qué es el Nuevo Estado Federal de China
-
-新中国联邦有一个信仰
-El Nuevo Estado Federal de China tiene una creencia
-
-干掉共产党, 唯真不破
-Eliminar al Partido Comunista, sólo la verdad no se rompe
-
-邪恶的力量也有一个信仰
-La fuerza maligna también tiene su creencia
-统治全人类
-Gobernar a la humanidad
-
-让他们永远成为我们的奴隶
-Y que ellos se conviertan en nuestros esclavos por siempre
-
-不管变成今天的共产主义
-No importa el Comunismo de hoy
-
-还是达沃斯论坛, 还是共济会
-O el Foro de Davos o la masonería
-
-还有什么骷髅会, 你都不用想
-Y que si La Orden, no lo pienses
-
-那都是自己的一根毛
-Todo eso es un pelo cabelludo de uno mismo
-
-为啥七哥最早成为共济会要招募的人呢
-Por qué fui el primero en ser reclutado por la masonería
-
-你们从来没搞明白这些事, 你以为我长得好看
-Ustedes nunca comprendieron estas cosas, tu crees porque yo siendo bonito
-
-它才不在乎你长不长得好看
-A él no le importa si eres bonito o no
-
-据我所了解的沼泽地很多人都是歪瓜列枣的
-Hasta donde sepa, muchas personas del pantano son feas
-
-缺胳膊少腿的
-Les faltan un brazo o una pierna
-
-他们都是近亲结婚
-Ellos son matrimonios por consanguinidad
-
-很多都是近亲结婚
-Muchos son matrimonios por consanguinidad
-就像你看到中东有些国家
-Así como los países del Medio Oriente que ves
-
-它就是近亲结婚, 缺胳膊少腿傻呼呼的
-Son matrimonios por consanguinidad, les faltan un brazo o una pierna y son tontos
-
-是吧
-Cierto
-
-姊妹表亲结婚
-Matrimonio entre primos y hermanas
-
-罗斯柴尔德家里边不就很多近亲结婚, 导致了很多问题
-Muchos de la familia Rothschild tuvieron matrimonios por consanguinidad, esto causó muchos problemas
-
-是不是, 这就不用说了
-Cierto o no, ya esto no es necesario de decir
-
-这就不用说, 罗斯柴尔德家族史其中代表之一
-No es necesario de decir, la historia de la familia Rothschild es uno de los representantes
-
-从战争的借款者, 高利贷者
-Desde prestatarios de la guerra hasta usureros
-
-变成了当地的财富统治者
-Se convirtieron en el gobernante local de la riqueza
-
-他只是之一
-Él solamente es uno de ellos
-
-日期：02/02/2022
-原视频标题：达沃斯党和共产党的信仰是统治全球，新中国联邦的信仰是消灭共产党
-La creencia del Partido de Davos y Partido Comunista es gobernar al mundo; la creencia del Nuevo Estado Federal de China es eliminar al Partido Comunista
-
-* * *
-
-原视频日期：01/23/2022
-原视频网址：[**https://gettr.com/post/pq1d850c70**](https://gettr.com/post/pq1d850c70)
-任务编号：KC440（3572）
-视频时间段：0:00-02:08
-西听校：洛杉矶盘古农场- 霙霙（文霙）
-翻译：洛杉矶盘古农场- 小文萱
-翻译终校：洛杉矶盘古农场- 霙霙（文霙）
-字幕+视频制作：洛杉矶盘古农场-天涯行
-审片：洛杉矶盘古农场-银龙
-发布：洛杉矶盘古农场-恩典
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
