--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,52 +1,20 @@
 ---
-title: 喜马拉雅币一周分析与总结（1月31日-2月6日）
+title: 雅典娜时报-第197期
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/1968380/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1968467/)
 
-作者：纽约香草山金融部 – ILOVE战神
+#### **《雅典娜时报》汇聚全球新闻时事**
 
+#### 编辑：精灵蓝
+排版：小蚂蚁614
+![圖片](https://media.discordapp.net/attachments/825592691433668612/940055590200291358/155_4.png?width=768&amp;height=1144)![圖片](https://media.discordapp.net/attachments/825592691433668612/940055590787481621/155_3.png?width=768&amp;height=1144)
+*发布：陶子*
 
-
-![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
-
-
-
-过去一周喜马拉雅币价格在51美元左右浮动，最高价格约53.8美元，平均日交易量约8万枚喜币。喜币上市以来总交易量约2720万枚 ，占今年总发行量的仅约2.72%。目前喜币交易在全球尚未完全开放，市场交易量较低，价格仍被严重低估。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide10-2.jpg)
-2月1日大年初一，喜支付APP Himalaya Pay正式上线。喜支付上线前后，全球股票市场与数字货币市场都处于大幅下跌区间，喜马拉雅币价格则持续大幅上升。Himalaya Pay支持点对点转账交易，手续费为零，交易立即到账，彻底颠覆了传统金融机构和政府对经济活动的垄断。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Capture-7.jpg)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture2-3.png)
-
-本周据郭文贵先生在大直播中透露，目前已经存在从中共国将人民币兑换为喜美元HDO的转账通道，并且立刻到账。喜支付未来也会推出多个币种的转账功能。郭先生表示，无中心化、无中介化是喜支付的核心价值。喜支付代表了新中国联邦人的信仰和追求，将帮助全人类解放生产力，实现财务的自由，并为新世界建立金融标准。喜支付将极大提升交易的安全性、经济性、便利性、隐私性，为用户开创全新的商业模式，信用体系和金融服务，并实现财富的保值和显著的投资收益。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture3-1.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/02/Picture4-2.png)
-参考链接：
-[喜交所 Himalaya Exchange](https://himalaya.exchange/himalaya-pay)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpeg)
-
-总编：天灭中共
-编辑：飞虹
-校对/发稿：为真不破20
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
-
-
-![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
-
-
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
