--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,27 +1,41 @@
 ---
-title: 福特因“持续的供应链中断 ”而关闭8家工厂
+title: 七哥五年前置身家性命于不顾发起的爆料能否唤醒装睡者
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968735/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968853/)
 
-编译：花岗岩
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-96.jpg)
-图片来源：网络截图
+G-TV视频链接：[https://gtv.org/video/id=61fee51bd90bdd2085a587ba](https://gtv.org/video/id=61fee51bd90bdd2085a587ba)
 
-据零对冲12月6日报道，福特汽车公司在第四季度利润和销售未达到华尔街预期后跌入熊市。首席执行官吉姆·法利（Jim Farley）警告说，“持续的供应链中断”限制了其满足强劲需求的能力。
+**郭文贵先生：**所以今天五年的时候，你能想到我当年爆料，当时郭美还没回到家呢，刘彦平还没放她回去呢，我就爆了，就是五年前的今天，他可能不让我女儿一辈子都不让她回来，但是我做这个决定我就是爆了。所以刘彦平给我打电话你们记得吗？你们还记得那个录音吗？“咋你就不跟我说一声吗？你直播什么播？我这不都准备好了嘛，让闺女回家嘛”，你们记得这段吧？
 
-路透社报道，因为芯片短缺问题，这家底特律汽车制造商将从周一开始关闭在美国、墨西哥和加拿大的八家工厂。
+如果中国人在历史上和今天有一个人能做到这点，你给我找出来，包括你们所谓的政治大家，什么这父那父的，你给我找一个人能做到这点的。我告诉刘彦平我说：“这事早有准备的，我一定会播的。”这五年来如果还不能唤醒很多人，这些人我永远也不想再唤醒了。
 
-位于密歇根州、芝加哥和墨西哥库奥蒂特兰（ Cuautitlan）的工厂将暂停生产。在堪萨斯城，其F-150皮卡的生产将暂停，而Transit货车的生产将有一个班次运行。底特律汽车制造商还将在其位于肯塔基州迪尔伯恩和路易斯维尔的工厂实行单班制或减少时间表，同时取消加拿大奥克维尔工厂的加班。所有变化都将在2月7日开始的一周内实施。
+字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
 
-周五，福特股价暴跌10%，此前该汽车制造商报告的第四季度利润和销售情况均未达到预期。该公司的股价已经暴跌到熊市。
+编辑整理：Jacques；
 
-美国银行证券部的约翰·墨菲（John Murphy）在周五的一份说明中告诉客户，福特的盈利不达标“是销量下降（芯片短缺/供应链中断）、原材料成本上升和移动支出增加的综合结果”。
+字幕文件制作：知津；
 
-路透社的报告描绘了该公司2022年具有挑战性的背景，因为它在采购芯片方面继续遇到麻烦，这个问题已经持续了一年多，至今仍未解决。
+视频制作及上传：Cindy；
 
-好消息是，随着电动汽车的推出，福特的转机正在进行中。然而，它必须降低其供应链的复杂性，这一过渡并不容易。
+G-News发布：小满；
 
-新闻来源：[Ford Shutters 8 Factories Due To “Persistent Supply Chain Disruptions”](https://www.zerohedge.com/markets/ford-shutters-8-factories-due-persistent-supply-chain-disruptions)
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
