--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,41 +1,29 @@
 ---
-title: 台湾外交部称俄中联合声明是对台湾主权的侮辱
+title: 所有人都恨习太阳一个人的“冬奥会”
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1968718/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968841/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/New_Project-2.jpg)资料图
-台湾英文新闻2022年02月05日台北报道，台湾外交部周六（2月5日）谴责俄罗斯和中共国当天发表的联合声明，称其试图取消台湾主权的合法性。
+#### 整理：雅典娜速记组
+编辑：开智则立
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8-45～8-50～1.png)
+战友问：中共花巨资邀请世界上所谓的这些虚伪的政客来参加冬奥会的开幕式，那按照常理的逻辑，应该是把这些领导人都照顾好，为什么会出现现在这种状况？
 
-在一份关于国际关系和全球可持续发展的联合声明中，俄罗斯重申其对“一个中国”原则的支持，并表示反对台湾独立。
+七哥：很简单！就像男女在一起，最后想再坚持20秒但能力不及。现在中国的经济，政治协调能力不及坚持不了20秒，就是好吃好喝的。它的钱和整个协调能力都不济了。
 
-此外，俄罗斯和中共国表示，“倡导民主和人权不能被用来对其他国家施加压力”，并表示反对在保护民主和人权的幌子下干涉主权国家的内政。两国还敦促国际社会“尊重文化和文明的多样性，以及不同国家人民的自决权”。
+第二、就是在党内，对这次所谓的习太阳本人的冬奥会，大家都恨，都是被绑架了。你觉得到现场工作的验病毒的人和天天被弄去表演的人， 只有那些朝阳群众？那些傻孩子，穷苦老百姓们，一辈子没见过摄像机，逮住上摄像机了，就是个表演的奴隶。剩下那些当官的，还有有脑子的人，包括张艺谋这些人，哪个愿意参加啊？天天有病毒的危险，恨啊！就是内部的仇恨以及这次所谓习太阳一人的表演。
 
-根据台湾外交部的一份新闻稿，外交部回应说，中共国从未统治过台湾，并强调只有由台湾人自由选举产生的政府才能在国际上代表这个国家。外交部说，无论中共政府如何试图歪曲其对台湾的看法，它都无法改变这一事实。
+第三、就是现在整个国内的病毒，已经到了大家无法想象的程度，带着内部的恐惧，内部的病毒带来的威胁，谁愿意干这个？很多人都恨这帮运动员，你们到中国，明知道这是一个虐待奴隶的地方，这是一个金钱交易的结果，你还往这儿冲，这些人骨子里面很多人是看不惯的。
 
-外交部说，中共国无权在世界上代表台湾，它不应该强迫其他国家、国际组织和国际公司违背其意愿支持“编造的”“一个中国”原则。它将中共继续谎称“台湾属于中华人民共和国”的说法称为中共国的虚假信息运动的一部分。
+早在几个月以前，西方世界开始调查这次冬奥会所有奥林匹克委员会有多少人在中国拿到了利润。我告诉大家你看看，国际奥林匹克委员会有多少次换主席? 什么萨马兰奇？多少次腐败？哪次腐败不都是跟申请奥运会和开奥运会有关系？我觉的人类有奥林匹克精神之外，奥林匹克之神在上天都会怒它！就是中国共产党已经把奥林匹克国际体育组织变成了真的是让它威胁的一个小姐。
 
-台湾外交部指责中共国利用与俄罗斯的双边会谈来推动专制主义的扩张，是对“奥林匹克五环的侮辱”。它补充说，“世界认识到中共政权的侵略、扩张和破坏和平的狰狞面目”。
+*发布：开智则立*
 
-简评：
-
-中共在中俄发表这个联合声明上面花了天价的钱，为俄罗斯能与中共共同署名站队，据说中共支付了俄罗斯1000亿美金，这些钱都来自与中共国的老百姓。在这样的政府统治下，中共国还有无数个杨改兰在为每天的生存挣扎中。中共提出的所谓‘一个中国’原则本身就是十分可笑的，历史告诉我们真正将中国一分为二的就是中共。是中共在二战唆使日本入侵中国，挑起日本与国民党军队的大战，而自己躲在山沟里面通过女色，谎言，画大饼欺骗无数的穷苦农民加入共产党为自己当炮灰。等到二战结束，日本战败退出中国，国民党元气大伤，而中共坐收渔翁之利乘势反击国民党，最终夺取了中共大陆的控制权。而历史又再一次告诉了我们，在中共掌权后，中国老百姓的苦难才真正的开始了，参与朝鲜战争，100万投降共产党的国民党军队被当炮灰，共产党又枪杀地主，没收土地分给自己，在大丰收的情况下又引发大饥荒，中国人民死了千千万，党内斗争造成文化大革命，各种批斗武斗，中国人民又死了千千万。为了毛泽东的一句话‘人多力量大’疯狂鼓励生育，又为中共在国际上的脸面施行‘一胎政策’，亿万的胎儿被强制扼杀在胎腹中，现在又担心以后奴隶不够用开放‘二胎’‘三胎’政策，中共像对待畜生一样将中国人玩弄于鼓掌之中。现在又想去玩弄台湾人，中共的所作所为真是人神共愤，中共就是比恐怖份子还要邪恶的恐怖份子，中共政权不除，全世界将永远没有安宁。
-
-新闻链接:[https://www.taiwannews.com.tw/en/news/4432321](https://www.taiwannews.com.tw/en/news/4432321)
-
-翻译/简评: kkoto(芬兰大灰狼)
-
-PR:Harvey（叶知秋）
-
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
-
-
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
