--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,45 +1,26 @@
 ---
-title: 较之地狱中地狱的大陆，台湾的偏狭短浅都是天堂的问题
+title: 为什么要追求喜马拉雅（二）
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968712/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968837/)
 
-G-TV视频链接：[https://gtv.org/video/id=61fe8009d90bdd2085a5637e](https://gtv.org/video/id=61fe8009d90bdd2085a5637e)
+整理：雅典娜速记组
+编辑：tianzhihuan
 
-**郭文贵先生：**所以说大牛这孩子他问得很可爱，你过去做的都是假的决定、错误的决定，就是因为台湾它允许你做了错误的决定你还活着，在大陆做一次错误决定，你已经完蛋了，你已经是肛门被捅了一万次了，就现在大陆一样，现在不检查嗓子，检查肛门。
+为啥追求喜马拉雅？当时海外的欺民贼攻击我的时候，当他们说郭文贵一手烂牌，不知道怎么打的时候，我真的是在那个18楼哈哈哈哈大笑，我那个笑声我觉得真的震到天了，也真的像拍电影一样，就像那武侠小说，我觉得我真的把纽约曼哈顿那种震垮的感觉，我笑了很久。就是他们，我知道这人是没希望了，就你告诉郭文贵我怎么打牌？我都能印出154张牌，不是54张牌，你告诉我解释解释喜马拉雅的意义，他都不知道，他应该看出郭文贵的神秘和他的深思熟虑，我就想完了，这帮人完了，这不是对牛弹琴了，这是与猪弹琴了。
 
-现在我见了很多美国人，我说：“去大陆参加冬奥会呀，去了他们检查你肛门，特别舒服，去呀！”对吧？我们鼓励任何人现在去参加冬奥会。我跟那个美国政府的官员开玩笑，我说：“你们都把人送去，去肛门测测去。”美国人接受不了他们受这屈辱，看着自己的老婆被一堆人围着检查肛门，自己的女儿被人家检查肛门。你检查去呀。
+你必须问一个问题，为什么他吃猪食，他不吃馒头，吃包子，人为什么不吃猪食啊？现在猪告诉人家说，你郭七，你个傻货竟然吃大包子，你看，我这猪食吃多好啊，那你发现原来这是猪啊，这一群猪啊，原来我的市场这么大，我就继续吃我的，那你吃你的猪食把。我用了几年证明了这个。当我说一切都是刚刚开始的时候，欺民贼就骂我，攻击我，共产党说这个傻子，一切都是刚刚开始你永远都不会结束，他就不知道“一切都是刚刚开始”这句话，是从什么时候开始的？罗马时代，波斯人是人类文明的开始，你看当年波斯打仗的时候在前面的，一切都是刚刚开始。
 
-所以大牛你刚才的话就问出了一个重点，你在大陆你已经死完好多次了，被捅肛门无数次了，大陆是不允许你犯错的，台湾允许你犯错，你好好爱台湾。还有你今天的动机是要灭共灭掉邪恶、保护台湾，几个台湾年轻人有你这样伟大的信仰？那才是今天我们坐在这的根本原因。
+没人懂他，就没有人真正懂人类的历史文明的历史，耶稣告诉你，现在从十字架下来了，他从十字架下来了，活着回来了，证明给你，我是神，我能活着。第一句话，一切都是他。没人解读过。所以说今天雷蒙问得好，喜马拉雅山就是耶稣复活的故事。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/为什么要追求喜马拉雅（二）-.jpg)
+2022年1月7日文贵大直播
 
-你太可爱了，真的是，巴黎、大牛真的是台湾的可爱的人。台湾也正在失去一切，光赚钱搞工作，完全没有世界观，一切都是小岛，那也很多问题，但是跟大陆比，你是天堂的问题，我们是地狱中的地狱，这是完全不同的概念，谢谢！
-
-字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
-
-编辑整理：Jacques；
-
-字幕文件制作：知津；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+*发布：tianzhihuan*
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
